2월 9일자 번역자료로 업데이트

--- a/abilities_l_english.properties
+++ b/abilities_l_english.properties
@@ -1,42 +1,42 @@
 ABILITY_TOOLTIP_NAME코0=$NAME|H$
-ABILITY_TOOLTIP_NAME_CANCEL코0=§RCancel: $NAME|H$§!
-ABILITY_TOOLTIP_COST코0=Command Power Cost: $VALUE|H$
-ABILITY_TOOLTIP_DETAILED_COST코0=    - Base cost: $VALUE|H2$ (each for $UNITS|H0$ battalions)
-ABILITY_TOOLTIP_DAILY_COST코0=Command Power Daily Cost: $VALUE|H2$
-ABILITY_TOOLTIP_ALLOCATION코0=Command Power Allocation: $VALUE|H2$
-ABILITY_TOOLTIP_NOT_ENOUGH_CP코0=§RNot enough command power.§!
-ABILITY_TOOLTIP_IS_ALREADY_ACTIVE코0=§RAbility is already active.§!
-ABILITY_TOOLTIP_IS_IN_COOLDOWN코0=§RAbility is in cooldown.§!
-ABILITY_LEADER_CANNOT_USE_ABILITIES코1=§RUnit Leader sick or wounded and cannot use abilities.§!
-ABILITY_TOOLTIP_DURATION코0=Duration: $VALUE|H$
-ABILITY_TOOLTIP_COOLDOWN코0=Cooldown: $VALUE|H$
+ABILITY_TOOLTIP_NAME_CANCEL코0=§R취소\: $NAME|H$§\!
+ABILITY_TOOLTIP_COST코0=지휘력 비용\: $VALUE|H$
+ABILITY_TOOLTIP_DETAILED_COST코0=- 기본 비용\: $VALUE|H2$ (각 $UNITS|H0$ 대대마다)
+ABILITY_TOOLTIP_DAILY_COST코0=지휘력 일일 비용\: $VALUE|H2$
+ABILITY_TOOLTIP_ALLOCATION코0=지휘력 할당량\: $VALUE|H2$
+ABILITY_TOOLTIP_NOT_ENOUGH_CP코0=§R지휘력이 충분하지 않습니다.§\!
+ABILITY_TOOLTIP_IS_ALREADY_ACTIVE코0=§R능력이 이미 활성화되었습니다.§\!
+ABILITY_TOOLTIP_IS_IN_COOLDOWN코0=§R능력이 재사용 대기중입니다.§\!
+ABILITY_LEADER_CANNOT_USE_ABILITIES코1=§R부대의 지휘관이 아프거나 부상당하면 능력을 쓸 수 없습니다.§\!
+ABILITY_TOOLTIP_DURATION코0=지속\: $VALUE|H$
+ABILITY_TOOLTIP_COOLDOWN코0=재사용 대기\: $VALUE|H$
 ALLOCATED_CP_ENTRY코0=$NAME$ ($DURATION$)
-ABILITY_DUR_HOURS코0=$num|H$ hours
-ABILITY_DUR_DAYS코0=$num|H$ days
-ABILITY_LAST_STAND코0=Last Stand
-ABILITY_LAST_STAND_TOOLTIP코0=Last Stand ($LEADER$)
-ABILITY_LAST_STAND_DESC코0=Your armies will get a defensive bonus at the expense of some disadvantages.
-ABILITY_FORCE_ATTACK코0=Force Attack
-ABILITY_FORCE_ATTACK_TOOLTIP코0=Force Attack ($LEADER$)
-ABILITY_FORCE_ATTACK_DESC코0=Your armies will get an offensive bonus at the expense of some disadvantages.
-ABILITY_STAFF_OFFICE_PLAN코0=Staff Office Plan
-ABILITY_STAFF_OFFICE_PLAN_DESC코0=Your units will get a major boost to their planning speed.
-ABILITY_STAFF_MORE_GROUND_CREWS코0=More Ground Crews
-ABILITY_STAFF_MORE_GROUND_CREWS_DESC코0=You will get an efficiency boost for a strategic region.
-ABILITY_SIEGE_ARTILLERY코0=Siege Artillery
-ABILITY_SIEGE_ARTILLERY_DESC코1=Specialized siege artillery will cause heavy damage to forts and provide a fort attack bonus.
-ABILITY_GLIDER_PLANES_ARTILLERY코0=Glider Planes
-ABILITY_GLIDER_PLANES_ARTILLERY_DESC코1=Assigning glider planes will increase the transport capacity for paratrooper orders.
-ABILITY_FASTER_NAVAL_PLANNING코0=Naval Assault Plan
-ABILITY_FASTER_NAVAL_PLANNING_DESC코1=Requsition additional landing craft and resources for a naval invasion.
-ABILITY_PROBING_ATTACK코0=Probing Attack
-ABILITY_PROBING_ATTACK_DESC코1=Divisions do not lose their entrenchment bonus when attacking, but do not fully commit to battle.
-ABILITY_MAKESHIFT_BRIDGES코0=Makeshift Bridges
-ABILITY_MAKESHIFT_BRIDGES_DESC코1=Building makeshift bridges will reduce river crossing penalties in combat.
-ABILITY_EXTRA_SUPLIES코1=Extra Supplies
-ABILITY_EXTRA_SUPLIES_DESC코1=Extra supplies are acquired for the troops.
-ABILITY_REQUISITION_WINTER_GEAR코0=Requisition Winter Gear
-ABILITY_REQUISITION_WINTER_GEAR_DESC코1=Winter gear will provide a bonus to cold weather acclimatization.
-ABILITY_ON_ADD코0=On Execute:
-ABILITY_ON_HOURLY코0=On Each Hour:
-ABILITY_ON_DAILY코0=On Each Day:
+ABILITY_DUR_HOURS코0=$num|H$ 시간
+ABILITY_DUR_DAYS코0=$num|H$ 일
+ABILITY_LAST_STAND코0=최후의 저항
+ABILITY_LAST_STAND_TOOLTIP코0=최후의 저항 ($LEADER$)
+ABILITY_LAST_STAND_DESC코0=당신의 군대는 방어 혜택과 동시에 약간의 불이익을 받게 됩니다.
+ABILITY_FORCE_ATTACK코0=무차별 공격
+ABILITY_FORCE_ATTACK_TOOLTIP코0=무차별 공격 ($LEADER$)
+ABILITY_FORCE_ATTACK_DESC코0=당신의 군대는 공격 혜택과 동시에 약간의 불이익을 받게 됩니다.
+ABILITY_STAFF_OFFICE_PLAN코0=참모 장교 계획
+ABILITY_STAFF_OFFICE_PLAN_DESC코0=당신의 부대가 지닌 계획 수립 속도에 큰 가속력이 붙게 됩니다.
+ABILITY_STAFF_MORE_GROUND_CREWS코0=지상부대 추가
+ABILITY_STAFF_MORE_GROUND_CREWS_DESC코0=전략 지역에 있어 효율 가속도를 얻을 것입니다.
+ABILITY_SIEGE_ARTILLERY코0=공성포
+ABILITY_SIEGE_ARTILLERY_DESC코1=특수한 공성포는 요새에 큰 피해를 주며 요새 공격에 혜택을 줍니다.
+ABILITY_GLIDER_PLANES_ARTILLERY코0=글라이더 비행기
+ABILITY_GLIDER_PLANES_ARTILLERY_DESC코1=글라이더 비행기를 배정해 공수 명령의 수송량을 증가시킵니다.
+ABILITY_FASTER_NAVAL_PLANNING코0=해상 공세 계획
+ABILITY_FASTER_NAVAL_PLANNING_DESC코1=추가적인 상륙용 주정과 해상 침공을 위한 자원을 요청합니다.
+ABILITY_PROBING_ATTACK코0=탐침 공격
+ABILITY_PROBING_ATTACK_DESC코1=사단들이 공격을 해도 참호 혜택을 잃지 않습니다. 그러나 너무 전투에 정신이 팔리면 안 됩니다.
+ABILITY_MAKESHIFT_BRIDGES코0=가교
+ABILITY_MAKESHIFT_BRIDGES_DESC코1=가교를 건설해 전투시 도하 불이익을 감소시킵니다.
+ABILITY_EXTRA_SUPLIES코1=추가 보급품
+ABILITY_EXTRA_SUPLIES_DESC코1=부대들에 추가적인 보급품을 지급합니다.
+ABILITY_REQUISITION_WINTER_GEAR코0=동계 장비 요청
+ABILITY_REQUISITION_WINTER_GEAR_DESC코1=동계 장비를 지급해 추위 기후 적응에 대해 혜택을 줍니다.
+ABILITY_ON_ADD코0=즉시\:
+ABILITY_ON_HOURLY코0=매시간마다\:
+ABILITY_ON_DAILY코0=매일마다\:
