--- a/army_l_english.properties
+++ b/army_l_english.properties
@@ -1,145 +1,145 @@
-ARMY_TEMPLATE_INFO코0=$NAME$: $COUNT|H$
-ARMY_ARMY_LABEL코0=Division Overview
-ARMY_NAVY_LABEL코0=Navy Overview
-ARMY_AIR_LABEL코0=Air Forces Overview
-ARMY_FILTER_LABEL코0=Filter:
-ARMY_DIVISIONS_ACTIVE코0=$N$ Divisions
-ARMY_DIVISIONS_THEATRES코0=Active in $N$ Theater(s)
-ARMY_NAVIES_MISSION코0=Mission: $MISSION$
-ARMY_NAVIES_MISSION_REGIONS코0=Mission: $MISSION$ in $N$ Area(s)
-ARMY_NAVIES_ACTIVE코0=$N$ Fleets
-ARMY_NAVIES_THEATRES코0=Active in $N$ Strategic area(s)
+ARMY_TEMPLATE_INFO코0=$NAME$\: $COUNT|H$
+ARMY_ARMY_LABEL코0=육군 개요
+ARMY_NAVY_LABEL코0=해군 개요
+ARMY_AIR_LABEL코0=공군 개요
+ARMY_FILTER_LABEL코0=필터\:
+ARMY_DIVISIONS_ACTIVE코0=$N$ 사단
+ARMY_DIVISIONS_THEATRES코0=$N$ 전구에서 활동 중
+ARMY_NAVIES_MISSION코0=임무\: $MISSION$
+ARMY_NAVIES_MISSION_REGIONS코0=임무\: $N$ 구역 $MISSION$
+ARMY_NAVIES_ACTIVE코0=$N$ 함대
+ARMY_NAVIES_THEATRES코0=$N$ 전략 구역에서 활동 중
 ARMY_NAVIES_TOOLTIP_DELAYED_TEMPLATE코0=$NAME|H$ ($TYPE|H$)
-ARMY_NAVIES_TOOLTIP_DETAILED_DESC코0=We have only one §Y$TYPE$§! in total.
-ARMY_NAVIES_TOOLTIP_DETAILED_MULTIPLE_DESC코0=We have $COUNT$ §Y$TYPE$s§! in total.
-ARMY_DIVISION_TOOLTIP_DETAILED_DESC코0=We have only one $TYPE|Y$ division in our army.
-ARMY_DIVISION_TOOLTIP_DETAILED_MULTIPLE_DESC코0=We have $COUNT$ $TYPE|Y$ divisions in our army.
-ARMY_AIR_WINGS_ACTIVE코0=$N$ Air Wings
-ARMY_AIR_WINGS_THEATRES코0=Active in $N$ Strategic area(s)
+ARMY_NAVIES_TOOLTIP_DETAILED_DESC코0=우리는 §Y$TYPE$§\!을(를) 단 한 척만 가졌습니다.
+ARMY_NAVIES_TOOLTIP_DETAILED_MULTIPLE_DESC코0=우리는 §Y$TYPE$§\!을(를) 총 $COUNT$척 가졌습니다.
+ARMY_DIVISION_TOOLTIP_DETAILED_DESC코0=우리 육군은 단 하나의  $TYPE|Y$ 사단만 가졌습니다.
+ARMY_DIVISION_TOOLTIP_DETAILED_MULTIPLE_DESC코0=우리 육군은 $COUNT$개 $TYPE|Y$ 사단을 가졌습니다.
+ARMY_AIR_WINGS_ACTIVE코0=$N$ 비행단
+ARMY_AIR_WINGS_THEATRES코0=$N$ 전략 구역에서 활동 중
 ARMY_AIR_WINGS_ASSIGNED_REGION코0=$REGION$
-ARMY_DIVISIONS_GROUP_NO_LEADER코2=In an $ARMY|H$
-ARMY_DIVISIONS_GROUP_LEADER코2=In an $ARMY|H$ led by $LEADER|Y$
-ARMY_DIVISIONS_BUTTON코0=§GClick§! to select.\n§GClick§! while §HHolding Shift§! to select multiple divisions.\n§GRight-click§! to pan to the Division.
+ARMY_DIVISIONS_GROUP_NO_LEADER코2=$ARMY|H$
+ARMY_DIVISIONS_GROUP_LEADER코2=$ARMY|H$은(는) $LEADER|Y$이(가) 이끌고 있음
+ARMY_DIVISIONS_BUTTON코0=§G클릭§\!으로 선택합니다.\n§HShift를 누른채로§\! §G클릭§\!해서 여러 사단을 선택합니다.\n§G오른쪽 클릭§\!으로 사단 재배정.
 ARMY_DIVISIONS_TYPE코0=$TYPE|Y$
-ARMY_NAVIES_SHIPS_HEADER코0=$N|Y$ ship(s)
+ARMY_NAVIES_SHIPS_HEADER코0=$N|Y$ 선박
 ARMY_NAVIES_SHIPS_ENTRY코0=$TYPE|Y$ $DESC$ ($NAME|Y$)
-ARMY_NAVIES_BUTTON코0=§GClick§! to select.\n§GClick§! while §HHolding Shift§! to select multiple Fleets.\n§GRight-click§! to pan to the Fleet (or a Port).
+ARMY_NAVIES_BUTTON코0=§G클릭§\!을 눌러 선택.\n§HShift§\!를 누른 상태에서 §G클릭§\!하여 여러 함대를 동시에 선택.\n§G우클릭§\!으로 함대(또는 항구) 위치로 이동.
 ARMY_NAVIES_LEADER코0=$LEADER|Y$
-ARMY_NAVIES_MISSION_HEADER_MOVING코0=Fleet changing its location.
-ARMY_NAVIES_MISSION_HEADER_NO_REGIONS코0=Fleet does not have a mission.
-ARMY_NAVIES_MISSION_HEADER_REGIONS코0=$MISSION|Y$ in Strategic areas:
+ARMY_NAVIES_MISSION_HEADER_MOVING코0=함대가 위치를 변경 중.
+ARMY_NAVIES_MISSION_HEADER_NO_REGIONS코0=아무런 임무도 수행하고 있지 않습니다.
+ARMY_NAVIES_MISSION_HEADER_REGIONS코0=전략 구역에서 $MISSION|Y$ 수행 중\:
 ARMY_NAVIES_MISSION_REGIONS_ENTRY코0=$REGION|Y$
-ARMY_AIR_BUTTON코1=§GClick§! to select.\n§GClick§! while §HHolding Shift§! to select multiple Air Wings.\n§GRight-click§! to pan to the Air base.
-ARMY_AIR_MISSION_HEADER코0=Missions in $REGION|Y$:
+ARMY_AIR_BUTTON코1=§G클릭§\! 하여 선택.\n§G클릭§\! 하고 있는 도중 §HShift를 누르고§\! 여러 비행단을 선택.\n§G오른쪽 클릭§\! 하여 공군기지로 초점이동.
+ARMY_AIR_MISSION_HEADER코0=$REGION|Y$에서 임무\:
 ARMY_AIR_MISSION_ENTRY코0=$MISSION|Y$
-ARMY_DIVISONS_TAB코0=§YDivision§!
-ARMY_NAVIES_TAB코0=§YFleets§!
-ARMY_AIR_TAB코0=§YAir Wings§!
-ARMY_DIVISONS_FILTER_DESC코0=Enter a part of Unit name, Division Type, Theater, State, Leader name, Equipment name or Level name
-ARMY_NAVIES_FILTER_DESC코0=Enter a part of Unit name, Strategic area, Leader name, Mission name, Mission area or Ship name
-ARMY_AIR_FILTER_DESC코0=Enter a part of Air wing Equipment name or Type, Air base name, Ace name, Mission name or Mission area
-ARMY_SORT_NAME코0=Name
-ARMY_SORT_SIZE코0=Size
-ARMY_SORT_TYPE코0=Type
-ARMY_SORT_THEATRE코0=Theater
-UNASSIGNED_UNIT_DESCRIPTION코1=These Divisions are unassigned. Right-click an existing Army or create a new one to assign them.
-ARMY_SORT_GROUP코0=Army
-ARMY_SORT_REGION코0=Area
-ARMY_SORT_BASE코0=Air base
-AIR_OVERVIEW_CATEGORY_0코1=We have $COUNT|H$ §HCAS§! planes in our airforces:
-AIR_OVERVIEW_CATEGORY_1코1=We have $COUNT|H$ §HFighter§! planes in our airforces:
-AIR_OVERVIEW_CATEGORY_2코1=We have $COUNT|H$ §HNaval bomber§! planes in our airforces:
-AIR_OVERVIEW_CATEGORY_3코1=We have $COUNT|H$ §HHeavy fighter§! bomber planes in our airforces:
-AIR_OVERVIEW_CATEGORY_4코1=We have $COUNT|H$ §HTactical bomber§! planes in our airforces:
-AIR_OVERVIEW_CATEGORY_5코1=We have $COUNT|H$ §HStrategic bomber§! planes in our airforces:
-AIR_OVERVIEW_CATEGORY_6코1=We have $COUNT|H$ §HTransport§! planes in our airforces:
-AIR_OVERVIEW_CATEGORY_REGULAR_0코0=$COUNT|H$ are §HCAS§! planes
-AIR_OVERVIEW_CATEGORY_REGULAR_1코0=$COUNT|H$ are §HFighter§! planes
-AIR_OVERVIEW_CATEGORY_REGULAR_2코0=$COUNT|H$ are §HNaval bomber§! planes
-AIR_OVERVIEW_CATEGORY_REGULAR_3코0=$COUNT|H$ are §HHeavy fighter§! planes
-AIR_OVERVIEW_CATEGORY_REGULAR_4코0=$COUNT|H$ are §HTactical bomber§! planes
-AIR_OVERVIEW_CATEGORY_REGULAR_5코0=$COUNT|H$ are §HStrategic bomber§! planes
-AIR_OVERVIEW_CATEGORY_REGULAR_6코0=$COUNT|H$ are §HTransport§! planes
-AIR_OVERVIEW_CATEGORY_CARRIER_0코2=$COUNT|H$ are §HCarrier CAS§! planes
-AIR_OVERVIEW_CATEGORY_CARRIER_1코1=$COUNT|H$ are §HCarrier Fighter§! planes
-AIR_OVERVIEW_CATEGORY_CARRIER_2코1=$COUNT|H$ are §HCarrier Naval bomber§! planes
-AIR_OVERVIEW_CATEGORY_CARRIER_3코1=$COUNT|H$ are §HCarrier Heavy fighter§! planes
-AIR_OVERVIEW_CATEGORY_CARRIER_4코1=$COUNT|H$ are §HCarrier Tactical bomber§! planes
-AIR_OVERVIEW_CATEGORY_CARRIER_5코1=$COUNT|H$ are §HCarrier Strategic bomber§! planes
-AIR_OVERVIEW_CATEGORY_CARRIER_6코1=$COUNT|H$ are §HCarrier Transport§! planes
+ARMY_DIVISONS_TAB코0=§Y사단§\!
+ARMY_NAVIES_TAB코0=§Y함대§\!
+ARMY_AIR_TAB코0=§Y비행단§\!
+ARMY_DIVISONS_FILTER_DESC코0=부대 이름 또는 사단 유형, 전구, 주, 지휘관 이름, 장비명 혹은 등급명의 일부를 입력하세요.
+ARMY_NAVIES_FILTER_DESC코0=부대 이름, 전략 지구, 지휘관 이름, 임무명, 임무 지역 또는 함선 이름의 일부를 입력하세요.
+ARMY_AIR_FILTER_DESC코0=비행단 장비명 또는 유형, 공군 기지 이름, 정예조종사 이름, 임무명 또는 지역명의 일부를 입력하세요.
+ARMY_SORT_NAME코0=이름
+ARMY_SORT_SIZE코0=크기
+ARMY_SORT_TYPE코0=유형
+ARMY_SORT_THEATRE코0=전구
+UNASSIGNED_UNIT_DESCRIPTION코1=이 사단들은 배치되지 않았습니다. 존재하는 군단을 오른쪽 클릭하거나 새로 할당 할 군단을 만드세요.
+ARMY_SORT_GROUP코0=육군
+ARMY_SORT_REGION코0=구역
+ARMY_SORT_BASE코0=공군 기지
+AIR_OVERVIEW_CATEGORY_0코1=우리 공군은 $COUNT|H$ 대의 §H근접항공지원기§\!를 보유하고 있습니다\:
+AIR_OVERVIEW_CATEGORY_1코1=우리 공군은 $COUNT|H$ 대의 §H전투기§\!를 보유하고 있습니다\:
+AIR_OVERVIEW_CATEGORY_2코1=우리 공군은 $COUNT|H$ 대의 §H뇌격기§\!를 보유하고 있습니다\:
+AIR_OVERVIEW_CATEGORY_3코1=우리 공군은 $COUNT|H$ 대의 §H중전투기§\!를 보유하고 있습니다\:
+AIR_OVERVIEW_CATEGORY_4코1=우리 공군은 $COUNT|H$ 대의 §H전술폭격기§\!를 보유하고 있습니다\:
+AIR_OVERVIEW_CATEGORY_5코1=우리 공군은 $COUNT|H$ 대의 §H전략폭격기§\!를 보유하고 있습니다\:
+AIR_OVERVIEW_CATEGORY_6코1=우리 공군은 $COUNT|H$ 대의 §H수송기§\!를 보유하고 있습니다\:
+AIR_OVERVIEW_CATEGORY_REGULAR_0코0=§H근접항공지원기§\!가 $COUNT|H$ 대 있습니다.
+AIR_OVERVIEW_CATEGORY_REGULAR_1코0=§H전투기§\!가 $COUNT|H$ 대 있습니다.
+AIR_OVERVIEW_CATEGORY_REGULAR_2코0=§H뇌격기§\!가 $COUNT|H$ 대 있습니다.
+AIR_OVERVIEW_CATEGORY_REGULAR_3코0=§H중전투기§\!가 $COUNT|H$ 대 있습니다.
+AIR_OVERVIEW_CATEGORY_REGULAR_4코0=§H전술 폭격기§\!가 $COUNT|H$ 대 있습니다.
+AIR_OVERVIEW_CATEGORY_REGULAR_5코0=§H전략 폭격기§\!가 $COUNT|H$ 대 있습니다.
+AIR_OVERVIEW_CATEGORY_REGULAR_6코0=§H수송기§\!가 $COUNT|H$ 대 있습니다.
+AIR_OVERVIEW_CATEGORY_CARRIER_0코2=§H함재 근접항공지원기§\!가 $COUNT|H$ 대 있습니다.
+AIR_OVERVIEW_CATEGORY_CARRIER_1코1=§H함재 전투기§\!가 $COUNT|H$ 대 있습니다.
+AIR_OVERVIEW_CATEGORY_CARRIER_2코1=§H함재 뇌격기§\!가 $COUNT|H$ 대 있습니다.
+AIR_OVERVIEW_CATEGORY_CARRIER_3코1=§H함재 중전투기§\!가 $COUNT|H$ 대 있습니다.
+AIR_OVERVIEW_CATEGORY_CARRIER_4코1=§H함재 전술 폭격기§\!가 $COUNT|H$ 대 있습니다.
+AIR_OVERVIEW_CATEGORY_CARRIER_5코1=§H함재 전략 폭격기§\!가 $COUNT|H$ 대 있습니다.
+AIR_OVERVIEW_CATEGORY_CARRIER_6코1=§H함재 수송기§\!가 $COUNT|H$ 대 있습니다.
 ARMY_AIR_CATEGORY_TOOLTIP_ITEM코0=$COUNT|H$ - $BASE|H$ - $AREA$
 ARMY_AIR_CATEGORY_TOOLTIP_ITEM_NOT_FULL코0=$COUNT|H$/$MAX|H$ - $BASE|H$ - $AREA$
-ARMY_AIR_CATEGORY_TOOLTIP_ITEM_NO_AREA코0=no mission area
-ARMY_AIR_TOOLTIP_HEADER코0=$COUNT|H$ out of $LIMIT|H$ of type: $NAME|H$
-ARMY_AIR_VARIANT_AIRWING_ITEM코0=$COUNT|H$ out of $ALL|H$ in a $NAME|H$ Air Wing in $BASE|H$
-PLAN_VALUE_TITLE코0=Estimated plan value: $VAL$
-PLAN_VALUE_DISADVANTAGE코0=The plan is considered to be to our §Rdisadvantage§!.
-PLAN_VALUE_NEUTRAL코0=The plan is considered to be §Rrisky§!.
-PLAN_VALUE_ADVANTAGE코0=The plan is considered to be to our §Gadvantage§!.
-PLAN_VALUE_ENEMY_ARMY_SUPERIORITY코0=Superior Enemy: $VAL|0%+%$
-PLAN_VALUE_ENEMY_ARMY_INFERIORITY코0=Inferior Enemy: $VAL|0%+%$
-PLAN_VALUE_ENEMY_AIR_SUPERIORITY코0=Enemy Air Superiority: $VAL|0%+%$
-PLAN_VALUE_ENEMY_AIR_INFERIORITY코0=Friendly Air Superiority: $VAL|0%+%$
-PLAN_VALUE_LARGE_RIVER코0=Large river crossing: $VAL|0%+%$
-PLAN_VALUE_STRAIT코0=Strait: $VAL|0%+%$
-PLAN_VALUE_FORTIFIED코0=Fortified: $VAL|0%+%$
-PLAN_VALUE_NO_THREAT코0=§GNo detectable treats§!
-PLAN_VALUE_STILL_PLANNING코0=Division still preparing: $VAL|0%+%$
-PLAN_VALUE_NOT_IN_POSITION코0=Some divisions not in position: $VAL|0%+%$
-MILITA_ARMY_NAME코0=$TEMPLATE$ Milita $NUMBER$
-SWITCH_STRATEGIC_REDEPLOYMENT_MODE_OFF코0=Strategic redeployment order is §ROFF§!
-SWITCH_STRATEGIC_REDEPLOYMENT_MODE_ON코0=Strategic redeployment order is §GON§!
-SWITCH_STRATEGIC_REDEPLOYMENT_MODE_DETAILED코0=Strategic redeployment uses your §YInfrastructure§! to move troops faster.\nWhile active, units will suffer $ORG|R%$ penalty to Organization.\nThe unit's speed is set to $BASE|1Y$ km/h plus up to $INFR|=1G$ km/h extra, depending on the state's §YInfrastructure§!.
-FORCES_COMPARISON_HEADER코0=§HForces comparison:§! 
-FORCES_COMPARISON_EQUAL코0=roughly §Yequal§!\n
-FORCES_COMPARISON_STRONGER코0=we are §Gstronger§!\n
-FORCES_COMPARISON_WEAKER코0=the enemy is §Rstronger§!\n
-FORCES_COMPARISON_DESC코0=The comparison of our units vs enemy units along the border, and any enemies ahead in the advancement direction if there are any.
-VOLUNTEER_THEATER_GROUP_NAME_PATTERN코0=$VOLADJECTIVE$ Volunteers $NUMBER$
-THEATER_GROUP_NAME_PATTERN코0=$ADJECTIVE$ Theater $NUMBER$
-NEW_THEATER_GROUP코1=New Theater
-THEATER_GROUP_DIVISIONS_COUNT_DESC코0=$NAME|H$ has $COUNT|H$ divisions.
-THEATER_GROUP_SETTINGS_DESC코0=Settings
-THEATER_GROUP_ASSIGN_CLICK_BUTTON_DESC코1=§GClick to select all units in the current theater§!
-THEATER_GROUP_ASSIGN_RIGHT_CLICK_BUTTON_DESC코1=§GRight-Click to assign army to the current theater§!
-THEATER_GROUP_ASSIGN_TO_VOLUNTEERS_DESC코1=§RCannot assign non-volunteer armies to volunteer theater§!
-THEATER_GROUP_ASSIGN_FROM_VOLUNTEERS_DESC코1=§RCannot assign volunteer armies to non-volunteer theater§!
-THEATER_ORDER_GROUP_BAD_COMBATS코0=$NAME|H$: $COUNT|0R$ combat
-THEATER_ORDER_GROUP_BAD_COMBAT코0=$NAME|H$: $COUNT|0R$ combat
-THEATER_GROUP_OFFENSIVE_TROUBLES코0=§RThis theater is having problems in $BAD_COUNT|H$ offensive combat, out of $COUNT|H$ total.\nProblematic combat:§! \n$LIST$
-THEATER_GROUP_DEFENSIVE_TROUBLES코0=§RThis theater is having problems in $BAD_COUNT|H$ defensive combat, out of $COUNT|H$ total.\nProblematic combat:§! \n$LIST$
-THEATER_GROUP_OFFENSIVE_NO_TROUBLES코0=§GOur offense is going well§!
-THEATER_GROUP_DEFENSIVE_NO_TROUBLES코0=§GOur defense is going well§!
-THEATER_GROUP_OFFENSIVE_NO_COMBATS코0=No offensive combat
-THEATER_GROUP_DEFENSIVE_NO_COMBATS코0=No defensive combat
-NEW_THEATER_GROUP_BUTTON_DESC코0=§GClick to create new theater and assign all selected armies to it§!
-THEATER_GROUP_DISBAND_BUTTON_DESC코0=Disband Theater
-ARMY_NAVIES_DESTROYED_SHIP코1=$SHIP_TYPE$ $SHIP|H$ was sunk by $KILLER_COUNTRY$ $KILLER_TYPE$ $KILLER_SHIP|H$ when engaged in $REGION$ on the $DATE$.
-ARMY_NAVIES_DESTROYED_SHIP_BY_CARRIER코0=$SHIP_TYPE$ $SHIP|H$ was sunk by $KILLER_COUNTRY$ $KILLER_AIR$ taking off from $KILLER_TYPE$ $KILLER_SHIP|H$ when engaged in $REGION$ on the $DATE$.
-ARMY_NAVIES_DESTROYED_SHIP_BY_AIRWING코0=$SHIP_TYPE$ $SHIP|H$ was sunk by $KILLER_COUNTRY$ $KILLER_AIR$ when engaged in $REGION$ on the $DATE$.
-REINFORCEMENT_PRIORITY코0=Reinforcement priority:
-THEATER_GROUP_DISBAND_TITLE코1=Disband Theater
-THEATER_GROUP_DISBAND_DESC코0=Are you sure you want to §RDISBAND§! $GROUP|H$? All battle plans in the Army will be deleted!
-HISTORICAL_DIVISION_LORE_PLACEHOLDER_TEXT코0=§gThis is a placeholder description text, shortly telling a few words about this historical division.§!
-ALL_COUNTRIES코0=All Countries
-ALL_FACTIONS코0=All Factions
-OUR_LOSSES코0=Our Losses
-OUR_KILLS코0=Our Kills
-TOTAL_SHIPS_LOST코0=Total number of ships we have lost
-TOTAL_SHIPS_SUNK코0=Total number of ships we have sunk
-SHIPS_LOST_SUNK_OF_ARCHETYPE코0=We have lost $LOST|Y$ and sunk $SUNK|Y$ ships of the type $ARCHETYPE|Y$
-SHIPS_LOST_FILTER_COUNTRY코0=Filter on a country so that only ships lost to that country and ships we sunk owned by that country are shown
-SHIPS_LOST_FILTER_FACTION코0=Filter on a faction so that only ships lost to that faction and ships we sunk owned by that faction are shown
-SHIPS_LOST_DETAILS코0=§GClick to see details§!
-NAVAL_LOSSES코0=Naval Losses
-NOTEWORTHY_BATTLES코0=Noteworthy Battles
-BATTLES_OVER_TIME코0=Battles Over Time
-CURRENT_MONTH코0=Current Month
-LAST_MONTH코0=Last Month
-CURRENT_YEAR코0=Current Year
-OLDER코0=Older
-SPECIAL_FORCES_DESC코1=Only a certain percentage of our soldiers have what it takes to become Special Forces. We must husband this resource very carefully. Increasing the size of our army will allow us to find more recruits for the tougher assignments.
-SPECIAL_FORCES_DETAILS코1=The limit is $CAP_MULT|Y%1$ of your fielded regular battalions ($OTHER_BATS|Y$) with a minimum of $MIN_MOD|Y$
-ARMY_ON_BORDER_WAR_TOOLTIP코0=Army is engaged in a border war
-BATTALIONS_COUNT코0=$NUM$ Battalions
+ARMY_AIR_CATEGORY_TOOLTIP_ITEM_NO_AREA코0=대기중
+ARMY_AIR_TOOLTIP_HEADER코0=$NAME|H$의 $LIMIT|H$개 중 $COUNT|H$개
+ARMY_AIR_VARIANT_AIRWING_ITEM코0=$BASE|H$의 $NAME|H$ 비행단의 $ALL|H$개 중 $COUNT|H$개
+PLAN_VALUE_TITLE코0=계획 예상값\: $VAL$
+PLAN_VALUE_DISADVANTAGE코0=그 계획은 우리에게 §R불이익§\! 을 줄 것입니다.
+PLAN_VALUE_NEUTRAL코0=그 계획은 §R위험§\! 합니다.
+PLAN_VALUE_ADVANTAGE코0=그 계획은 우리에게 §G이득§\!을 줄 것입니다.
+PLAN_VALUE_ENEMY_ARMY_SUPERIORITY코0=우월한 적\: $VAL|0%+%$
+PLAN_VALUE_ENEMY_ARMY_INFERIORITY코0=열등한 적\: $VAL|0%+%$
+PLAN_VALUE_ENEMY_AIR_SUPERIORITY코0=적 제공권 우위\: $VAL|0%+%$
+PLAN_VALUE_ENEMY_AIR_INFERIORITY코0=아군 제공권 우위\: $VAL|0%+%$
+PLAN_VALUE_LARGE_RIVER코0=큰강 도하\: $VAL|0%+%$
+PLAN_VALUE_STRAIT코0=해협\: $VAL|0%+%$
+PLAN_VALUE_FORTIFIED코0=요새화됨\: $VAL|0%+%$
+PLAN_VALUE_NO_THREAT코0=§G탐지 불가§\!
+PLAN_VALUE_STILL_PLANNING코0=사단이 여전히 준비중\: $VAL|0%+%$
+PLAN_VALUE_NOT_IN_POSITION코0=몇몇 사단은 위치를 벗어남\: $VAL|0%+%$
+MILITA_ARMY_NAME코0=$TEMPLATE$ 민병대 $NUMBER$
+SWITCH_STRATEGIC_REDEPLOYMENT_MODE_OFF코0=전략적 재배치 명령을 §R끔§\!
+SWITCH_STRATEGIC_REDEPLOYMENT_MODE_ON코0=전략적 재배치 명령을 §G켬§\!
+SWITCH_STRATEGIC_REDEPLOYMENT_MODE_DETAILED코0=전략적 재배치는 병력을 더 빠르게 이동시키기 위해 여러분의 §Y기반시설§\!을 이용합니다. \n이동 중 부대는 $ORG|R%$의 조직화 불이익을 받을 것입니다.\n부대의 속도는 지역의 §Y기반시설§\!에 따라 $BASE|1Y$ km/h에서 $INFR|\=1G$ km/h까지 증속을 포함하여 설정됩니다.
+FORCES_COMPARISON_HEADER코0=§H전투력 비교\:§\! 
+FORCES_COMPARISON_EQUAL코0=거의 §Y비슷하다§\!\n
+FORCES_COMPARISON_STRONGER코0=우리가 더 §G강하다§\!\n
+FORCES_COMPARISON_WEAKER코0=적군이 더 §R강하다§\!\n
+FORCES_COMPARISON_DESC코0=국경에 있는 아군과 적군 부대 그리고, 그곳에 위치한 부대의 앞서 진보된 방향의 기술을 비교한 것입니다. 
+VOLUNTEER_THEATER_GROUP_NAME_PATTERN코0=$VOLADJECTIVE$ 의용군 $NUMBER$
+THEATER_GROUP_NAME_PATTERN코0=$ADJECTIVE$ 전구 $NUMBER$
+NEW_THEATER_GROUP코1=새 전구
+THEATER_GROUP_DIVISIONS_COUNT_DESC코0=$NAME|H$ 는 $COUNT|H$ 개의 사단을 가지고 있습니다
+THEATER_GROUP_SETTINGS_DESC코0=설정
+THEATER_GROUP_ASSIGN_CLICK_BUTTON_DESC코1=§G클릭하여 현재 전구에 속한 모든 부대를 선택합니다.§\!
+THEATER_GROUP_ASSIGN_RIGHT_CLICK_BUTTON_DESC코1=§G오른쪽 클릭하여 부대를 현재 전구에 배치시킵니다.§\!
+THEATER_GROUP_ASSIGN_TO_VOLUNTEERS_DESC코1=§R의용군이 아닌 부대를 의용군 전구에 할당 할 수 없습니다§\!
+THEATER_GROUP_ASSIGN_FROM_VOLUNTEERS_DESC코1=§R의용군을 의용군 전구 이외에 할당 할 수 없습니다§\!
+THEATER_ORDER_GROUP_BAD_COMBATS코0=$NAME|H$\: $COUNT|0R$ 전투
+THEATER_ORDER_GROUP_BAD_COMBAT코0=$NAME|H$\: $COUNT|0R$ 전투
+THEATER_GROUP_OFFENSIVE_TROUBLES코0=§R이 전구는 총 $COUNT|H$개 중, $BAD_COUNT|H$개 공격전에서 문제를 겪고 있습니다.\n문제가 있는 전투\:§\!\n$LIST$
+THEATER_GROUP_DEFENSIVE_TROUBLES코0=§R이 전구는 총 $COUNT|H$ 개 중, $BAD_COUNT|H$개 방어전에서 문제를 겪고 있습니다.\n문제가 있는 전투\:§\!\n$LIST$
+THEATER_GROUP_OFFENSIVE_NO_TROUBLES코0=§G우리의 공격은 잘되어 갑니다§\!
+THEATER_GROUP_DEFENSIVE_NO_TROUBLES코0=§G우리의 방어는 잘되어 갑니다§\!
+THEATER_GROUP_OFFENSIVE_NO_COMBATS코0=공격전 없음
+THEATER_GROUP_DEFENSIVE_NO_COMBATS코0=방어전 없음
+NEW_THEATER_GROUP_BUTTON_DESC코0=§G클릭하여 새 전구를 만들고 선택된 모든 육군 부대를 배치시킵니다.§\!
+THEATER_GROUP_DISBAND_BUTTON_DESC코0=전구 해체
+ARMY_NAVIES_DESTROYED_SHIP코1=$SHIP_TYPE$ $SHIP|H$ 는 $DATE$ $REGION$ 에서 조우한 $KILLER_COUNTRY$ $KILLER_TYPE$ $KILLER_SHIP|H$ 에 의해 격침되었습니다.
+ARMY_NAVIES_DESTROYED_SHIP_BY_CARRIER코0=$SHIP_TYPE$ $SHIP|H$은(는) $DATE$ $REGION$의 교전에서 $KILLER_TYPE$ $KILLER_SHIP|H$에서\n 이륙한 $KILLER_COUNTRY$ $KILLER_AIR$에 의해 격침되었습니다.
+ARMY_NAVIES_DESTROYED_SHIP_BY_AIRWING코0=$SHIP_TYPE$ $SHIP|H$이(가) $DATE$ $REGION$에서 $KILLER_COUNTRY$ $KILLER_AIR$에 의해 격침되었습니다.
+REINFORCEMENT_PRIORITY코0=증원 우선권\:
+THEATER_GROUP_DISBAND_TITLE코1=전구 해체
+THEATER_GROUP_DISBAND_DESC코0=정말로 $GROUP|H$을 §R전구 해체§\! 하길 원합니까?? 이 육군의 모든 전투 계획이 삭제 될 것입니다\!
+HISTORICAL_DIVISION_LORE_PLACEHOLDER_TEXT코0=§g이것은 견본 설명 문구로, 이 역사적 사단에 대해 몇 마디로 간단하게 설명하고 있습니다.§\!
+ALL_COUNTRIES코0=모든 국가
+ALL_FACTIONS코0=모든 세력
+OUR_LOSSES코0=우리의 손실
+OUR_KILLS코0=우리의 전과
+TOTAL_SHIPS_LOST코0=손실된 선박의 총 수
+TOTAL_SHIPS_SUNK코0=침몰한 선박의 총 수
+SHIPS_LOST_SUNK_OF_ARCHETYPE코0=우리는 $LOST|Y$척을 잃어버리고 $ARCHETYPE|Y$타입의 함선 $SUNK|Y$척이 격침되었습니다.
+SHIPS_LOST_FILTER_COUNTRY코0=국가별 필터링을 통해, 우리가 소유한 함선이 어느 국가에 의해 격침되어 함선이 손실 되었는지 보여줍니다
+SHIPS_LOST_FILTER_FACTION코0=세력별 필터링을 통해, 우리가 소유한 함선이 어느 세력에 의해 격침되어 함선이 손실 되었는지 보여줍니다
+SHIPS_LOST_DETAILS코0=§G자세히 보려면 클릭§\!
+NAVAL_LOSSES코0=해군 손실
+NOTEWORTHY_BATTLES코0=주목할 만한 전투
+BATTLES_OVER_TIME코0=시간 경과에 따른 전투
+CURRENT_MONTH코0=이번 달
+LAST_MONTH코0=지난 달
+CURRENT_YEAR코0=올해
+OLDER코0=이전
+SPECIAL_FORCES_DESC코1=우리 병사의 소수만이 특수부대가 될 수 있습니다. 우리는 이 전투원을 잘 보존해야합니다.  우리 군대의 규모를 늘리면 까다로운 임무를 위한 특수부대를 더 모집할 수 있습니다.
+SPECIAL_FORCES_DETAILS코1=육군 정규군의 한계는 $CAP_MULT|Y%1$이고 ($OTHER_BATS|Y$) 최소한도는 $MIN_MOD|Y$ 입니다
+ARMY_ON_BORDER_WAR_TOOLTIP코0=육군이 국경 분쟁에서 교전하고 있습니다
+BATTALIONS_COUNT코0=$NUM$ 대대들
 MORE_THAN_NINE코0=9+
