--- a/decisions_l_english.properties
+++ b/decisions_l_english.properties
@@ -1,11 +1,11 @@
-DECISIONVIEW_TITLE코0=Events and Decisions
-DECISIONSVIEW_EVENT_HEADER코0=Events
-POPUP_NEWS코0=News Popup
-POPUP_EVENTS코0=Event Popup
-CATEGORY_COLLAPSE_DESC코0=§GClick§! to collapse
-CATEGORY_EXPAND_DESC코0=§GClick§! to expand
-DECISION_KEEP_NOTIFIED코1=§HNotify§!\n\n§GClick§! to §Rnot be notified§! when it is possible to take this decision.\n
-DECISION_NOT_KEEP_NOTIFIED코1=§HNotify§!\n\n§GClick§! to §Gbe notified§! when it is possible to take this decision.\n
-TAKE_DECISION_HEADER코0=§HTake decision§!\n\n
-DECISION_COST_DESC코0=It costs £pol_power $VAL|H0$ to take the decision
-DECISION_COST_NOT_ENOUGH코0=It costs £pol_power $VAL|HR0$ to take the decision
+DECISIONVIEW_TITLE코0=사건과 결정
+DECISIONSVIEW_EVENT_HEADER코0=사건
+POPUP_NEWS코0=뉴스 알림
+POPUP_EVENTS코0=사건 알림
+CATEGORY_COLLAPSE_DESC코0=§G클릭§\!으로 접기
+CATEGORY_EXPAND_DESC코0=§G클릭§\!으로 펼치기
+DECISION_KEEP_NOTIFIED코1=§H알림§\!\n\n이 결정을 내릴 수 있을 때, §R알림을 받지 않으려면§\! §G클릭§\!\n
+DECISION_NOT_KEEP_NOTIFIED코1=§H알림§\!\n\n이 결정을 내릴 수 있을 때, §R알림을 받으려면§\! §G클릭§\!\n
+TAKE_DECISION_HEADER코0=§H결정을 내리세요§\!\n\n
+DECISION_COST_DESC코0=이 결정을 내리려면 £pol_power $VAL|H0$의 비용이 듭니다.
+DECISION_COST_NOT_ENOUGH코0=이 결정을 내리려면 £pol_power $VAL|H0$의 비용이 듭니다.
