--- a/factions_l_english.properties
+++ b/factions_l_english.properties
@@ -1,35 +1,35 @@
-FACTION_LEADER코0=Faction leader: §Y$COUNTRY$§!
-FACTION_MEMBER코0=Faction member: §Y$COUNTRY$§!
-FACTION_CREATED_UNDER_MASTER_TITLE코0=Joined Master's Faction
-FACTION_CREATED_UNDER_MASTER_MESSAGE코0=We have joined $FACTION|H$ faction together under our master
-FACTION_NAME_GER_fascism코0=Axis
-FACTION_NAME_GER_none코0=Axis
-FACTION_NAME_IDEOLOGY_DEFAULT코0=Supporters of $IDEOLOGY$
-french_alliance코0=French Alliance
-the_berlin_moscow_axis코0=The Berlin-Moscow Axis
-domination_francaise코0=Domination Française
-french_entente_alliance코0=French-Entente Alliance
-daitoa_kyoeiken코0=Daitoa Kyoeiken
-italy_empire_faction코0=Novus Imperium Romanum
-chinese_united_front코0=Chinese United Front
-miedzymorze_faction코0=Międzymorze
-Allies코0=Allies
-Axis코0=Axis
-Comintern코0=Comintern
-western_pacific_sphere코0=Western Pacific Sphere
-south_west_pacific_initiative코0=The South-West Pacific Initiative
-north_american_alliance코0=North-American Alliance
-northern_sovereignty_coalition코0=Northern Sovereignty Coalition
-SAF_faction_uotap코0=African People's Union
-ROM_BALKAN_FACTION코0=Bucharest Accords
-HUN_BALKAN_FACTION코0=Balkan Pact
-HUN_PACT_OF_ROME_FACTION코0=Pact of Rome
-ROM_CORDON_SANITAIRE_FACTION코0=Cordon Sanitaire
-BALKAN_ENTENTE_FACTION코0=Balkan Entente
-CZE_little_entente코0=Czech Entente
-GER_central_powers_faction코0=Central Powers
-GER_anti_communist_bloc코0=Anti-Communist Bloc
-JAP_the_old_alliance코0=The Old Alliance
-JAP_the_new_international코0=The New International
-CHI_the_peoples_front코0=The People's Front
-PRC_mao_faction코0=Mutual Assistance Bloc
+FACTION_LEADER코0=세력 주도국\: §Y$COUNTRY$§\!
+FACTION_MEMBER코0=세력 회원국\: §Y$COUNTRY$§\!
+FACTION_CREATED_UNDER_MASTER_TITLE코0=종주국의 세력 가입
+FACTION_CREATED_UNDER_MASTER_MESSAGE코0=우리는 종주국과 함께 $FACTION|H$ 세력에 가입했습니다
+FACTION_NAME_GER_fascism코0=추축국
+FACTION_NAME_GER_none코0=추축국
+FACTION_NAME_IDEOLOGY_DEFAULT코0=$IDEOLOGY$의 지지국들
+french_alliance코0=프랑스 동맹
+the_berlin_moscow_axis코0=베를린-모스크바 추축국
+domination_francaise코0=프랑스 지배권
+french_entente_alliance코0=프랑스-협상국 동맹
+daitoa_kyoeiken코0=대동아공영권
+italy_empire_faction코0=신 로마 제국
+chinese_united_front코0=국공합작
+miedzymorze_faction코0=동유럽 연방
+Allies코0=연합국
+Axis코0=추축국
+Comintern코0=코민테른
+western_pacific_sphere코0=서태평양권
+south_west_pacific_initiative코0=남서태평양 주도권
+north_american_alliance코0=북아메리카 동맹
+northern_sovereignty_coalition코0=북부 주권 동맹
+SAF_faction_uotap코0=아프리카 인민 연합
+ROM_BALKAN_FACTION코0=부쿠레슈티 협약
+HUN_BALKAN_FACTION코0=발칸 조약
+HUN_PACT_OF_ROME_FACTION코0=로마 조약
+ROM_CORDON_SANITAIRE_FACTION코0=방역선
+BALKAN_ENTENTE_FACTION코0=발칸 협상국
+CZE_little_entente코0=체코 협상국
+GER_central_powers_faction코0=동맹국
+GER_anti_communist_bloc코0=반공권
+JAP_the_old_alliance코0=구 연합국
+JAP_the_new_international코0=신 인터내셔널
+CHI_the_peoples_front코0=인민전선
+PRC_mao_faction코0=상호원조권
