--- a/war_l_english.properties
+++ b/war_l_english.properties
@@ -1,9 +1,9 @@
-ST코0=st
-ND코0=nd
-RD코0=rd
-TH코0=th
-WAR_NAME코0=$ORDER$$FIRST$-$SECOND$ War
-CIVIL_WAR_NAME코0=$ORDER$$SECOND$ Civil War
-WAR_TAKE_CORE_NAME코0=$ORDER$$FIRST$ reclamation of $STATE$
-WAR_TAKE_CLAIM_NAME코0=$ORDER$$FIRST$ Aggression for $STATE$
-WAR_NAME_ITA_ETH코0=Italian War on Ethiopia
+ST코0=위
+ND코0=위
+RD코0=위
+TH코0=위
+WAR_NAME코0=$ORDER$$FIRST$-$SECOND$ 전쟁
+CIVIL_WAR_NAME코0=$ORDER$$SECOND$ 내전
+WAR_TAKE_CORE_NAME코0=$ORDER$$FIRST$의 $STATE$ 탈환
+WAR_TAKE_CLAIM_NAME코0=$ORDER$$FIRST$의 $STATE$ 침략
+WAR_NAME_ITA_ETH코0=이탈리아-에티오피아 전쟁
