--- a/wtt_border_conflict_l_english.properties
+++ b/wtt_border_conflict_l_english.properties
@@ -1,46 +1,46 @@
-WTT_border_conflict_initiate_incident코0=Stage Incident at {From.From.GetName} Border
-WTT_border_conflict_incident_warning_defender코0=Incident at {From.From.GetName} border to {From.GetNameDef}
-WTT_border_conflict_incident_warning_defender_desc코0=§WMove divisions to §H{From.From.GetName}§!§!
-WTT_border_conflict_escalation_warning_defender코0=Incident at {From.From.GetName} border to {From.GetNameDef}
-WTT_border_conflict_escalation_warning_defender_desc코0=§WMaintain divisions in §H{From.From.GetName}§!\n§H{From.GetNameDef}§! can escalate to a §HBorder Conflict§!§!.
-escalation_possible_tooltip_for_defender코0=§H{From.GetNameDef}§! can escalate incident to a §HBorder Conflict§!.\nWe will instantly lose if we have no divisions in the state\n
-effects_if_border_conflict_is_lost코0=§HEffects if Border Conflict is lost§!:\n
-from_cannot_escalate코0=§H{From.GetNameDef}§! can no longer escalate to a §HBorder Conflict§!.\n\n
-WTT_escalate_incident_to_border_conflict코0=Escalate to Border Conflict with {From.GetName}
-WTT_border_incident_forgotten코0=Incident in {From.From.GetName} Forgotten
-WTT_border_incident_delay_until_new_incident_120코0=Cannot stage a new incident against §H{From.GetName}§! for §H120§! days.\n
-WTT_border_incident_delay_until_new_incident_180코0=Cannot stage a new incident against §H{From.GetName}§! for §H180§! days.\n
-WTT_border_conflict_time_until_cancelled코0=No Progress in {From.From.GetName}
-WTT_border_conflict_back_out_of_conflict코0=Withdraw from Conflict
-WTT_border_conflict_escalate_conflict코0=Escalate Conflict
-WTT_border_conflict_escalate_to_war코0=Escalate To War
-defensive_border_conflict_won코0=Defensive Border Conflict Won
-not_initiated_border_incident_with_FROM코0=Has not initiated a Border Incident with {From.GetNameDef}
-not_initiated_border_incident_with_ROOT코0=Has not initiated a Border Incident with {Root.GetNameDef}
-at_least_one_division_in_state코0=At least §H1§! division in the State
-in_45_days코0=In 45 Days:\n
-border_incident_active코0=States do not have an active border incident
-wtt_border_conflict_won_attacker.1.t코0=Victory in {their_state.GetName}
-wtt_border_conflict_won_attacker.1.desc코0=The clash in the borderlands between {our_state.GetName} and {their_state.GetName} saw our forces win a clear victory over the forces of {their_country.GetLeader}. The {their_country.GetAdjective} forces have fallen back to regroup, and our forces have taken control of the disputed area.
-wtt_border_conflict_won_attacker.1.a코0=We've shown them our strength!
-wtt_border_conflict_won_defender.1.t코0=Victory in {their_state.GetName}
-wtt_border_conflict_won_defender.1.desc코0=The clash in the borderlands between {our_state.GetName} and {their_state.GetName} saw our forces win a clear victory over the forces of {their_country.GetLeader}. The {their_country.GetAdjective} forces have fallen back to regroup, and our forces have taken control of the disputed area.
-wtt_border_conflict_won_defender.1.a코0=We've shown them our strength!
-wtt_border_conflict_lost_attacker.1.t코0=Defeat in {our_state.GetName}
-wtt_border_conflict_lost_attacker.1.desc코0=Forces under the command of {their_country.GetLeader} have succeeded in pushing us out of the disputed area between {our_state.GetName} and {their_state.GetName}. Our forces have retreated in good order and are reorganising should we want to renew the battle in the future.
-wtt_border_conflict_lost_attacker.1.a코0=We must counterattack as soon as possible!
-wtt_border_conflict_lost_defender.1.t코0=Defeat in {our_state.GetName}
-wtt_border_conflict_lost_defender.1.desc코0=Forces under the command of {their_country.GetLeader} have succeeded in pushing us out of the disputed area between {our_state.GetName} and {their_state.GetName}. Our forces have retreated in good order and are reorganising should we want to renew the battle in the future.
-wtt_border_conflict_lost_defender.1.a코0=We must counterattack as soon as possible!
-wtt_border_conflict_canceled_attacker.1.t코0=Stalemate in {their_state.GetName}
-wtt_border_conflict_canceled_attacker.1.desc코0=The fighting in the {our_state.GetName}-{their_state.GetName} Area has ground to a halt as both sides have proven unable to dislodge the other. Little territory has been gained by either side. Scouts report that the {their_country.GetAdjective} soldiers on the other side are digging in on defensive terrain. It would appear that they intend to keep the territory they have, but probably won't push against our lines.
-wtt_border_conflict_canceled_attacker.1.a코0=We will return.
-wtt_border_conflict_canceled_defender.1.t코0=Stalemate in {their_state.GetName}
-wtt_border_conflict_canceled_defender.1.desc코0=The fighting in the {our_state.GetName}-{their_state.GetName} Area has ground to a halt as both sides have proven unable to dislodge the other. Little territory has been gained by either side. Scouts report that the {their_country.GetAdjective} soldiers on the other side are digging in on defensive terrain. It would appear that they intend to keep the territory they have, but probably won't push against our lines.
-wtt_border_conflict_canceled_defender.1.a코0=We will return.
-wtt_border_incident_defender_warning.1.t코0={From.GetNameDefCap} threatens our border
-wtt_border_incident_defender_warning.1.desc코0=Earlier yesterday, {their_country.GetAdjective} soldiers were spotted crossing the border from {attacker_state.GetName} into {defender_state.GetName}. During the night, more {their_country.GetAdjective} forces have poured into the area and set up defensive positions inside our territory. \n\nThis follows a series of minor skirmishes and border violations by forces under the command of {their_country.GetLeader} all along our shared border.\n\nThis time, however, it is clear that the {their_country.GetAdjective} forces are here to stay. We must send forces into the region as soon as possible to check their advance.
-wtt_border_incident_defender_warning.1.a코0=Mobilize all available forces!
-wtt_border_conflict_escalate_to_war.1.t코0={From.GetNameDefCap} Is Mobilizing for War
-wtt_border_conflict_escalate_to_war.1.desc코0=Scouting reports indicate that {From.GetAdjective} forces are massing inside {their_state.GetName} for a major operation to push deeper into {our_state.GetName}. Given the amount of resources {From.GetLeader} is willing to expend on this adventure, it is clear that this is no longer a mere dispute over the exact location of a demarcation line.\n\nFull scale war is on the horizon.
-wtt_border_conflict_escalate_to_war.1.a코0=We must be ready to meet them!
+WTT_border_conflict_initiate_incident코0={From.From.GetName} 국경 사건
+WTT_border_conflict_incident_warning_defender코0={From.From.GetName} 국경간 {From.GetNameDef} 사건
+WTT_border_conflict_incident_warning_defender_desc코0=§W사단 이동 §H{From.From.GetName}§\!§\!
+WTT_border_conflict_escalation_warning_defender코0={From.From.GetName} 국경간 {From.GetNameDef} 사건
+WTT_border_conflict_escalation_warning_defender_desc코0=§W§H{From.From.GetName}§\!에 사단을 유지하세요\n§H{From.GetNameDef}§\!에서의 §H국경 분쟁§\!으로 심화될 것입니다§\!.
+escalation_possible_tooltip_for_defender코0=§H{From.GetNameDef}§\!에서의 사건이 §H국경 분쟁§\!으로 심화될 수 있습니다.\n해당 주에 사단이 없다면 일시적으로 패배할 것입니다\n
+effects_if_border_conflict_is_lost코0=§H국경 분쟁에서 졌을 때 사라질 효과§\!\:\n
+from_cannot_escalate코0=§H{From.GetNameDef}§\!에서의 §H국경 분쟁§\!으로 심화될 수 없습니다.\n\n
+WTT_escalate_incident_to_border_conflict코0={From.GetName}과(와)의 국경 분쟁 심화
+WTT_border_incident_forgotten코0={From.From.GetName} 사건 잊힘
+WTT_border_incident_delay_until_new_incident_120코0=§H120§\!일 동안  §H{From.GetName}§\!을 상대로 새로운 사건을 전개 할 수 없습니다.\n
+WTT_border_incident_delay_until_new_incident_180코0=§H180§\!일동안 §H{From.GetName}§\!을 상대로 새로운 사건을 전개 할 수 없습니다.\n
+WTT_border_conflict_time_until_cancelled코0={From.From.GetName} 진전 없음
+WTT_border_conflict_back_out_of_conflict코0=분쟁 철수
+WTT_border_conflict_escalate_conflict코0=분쟁 심화
+WTT_border_conflict_escalate_to_war코0=전쟁 비화
+defensive_border_conflict_won코0=방어적 국경 분쟁 승리
+not_initiated_border_incident_with_FROM코0={From.GetNameDef}에서의 국경 사건을 개시할 수 없음
+not_initiated_border_incident_with_ROOT코0={Root.GetNameDef}에서의 국경 사건을 개시할 수 없음
+at_least_one_division_in_state코0=해당 주에 최소 §H1§\!개 사단이 필요함
+in_45_days코0=45일 동안\:\n
+border_incident_active코0=지역에 진행중인 국경 사건이 없습니다.
+wtt_border_conflict_won_attacker.1.t코0={their_state.GetName}에서의 승리
+wtt_border_conflict_won_attacker.1.desc코0={our_state.GetName} 와 {their_state.GetName} 사이 국경지대에 일어났던 충돌에서 {their_country.GetLeader}군에게 우리 군대가 명백한 승리를 거뒀습니다.  {their_country.GetAdjective}  군대는 전열을 가다듬기 위해 후퇴했으며, 우리 군대는 분쟁 영토의 통제권을 획득해냈습니다.
+wtt_border_conflict_won_attacker.1.a코0=우리의 힘을 똑똑히 봤겠지\!
+wtt_border_conflict_won_defender.1.t코0={their_state.GetName}에서의 승리
+wtt_border_conflict_won_defender.1.desc코0=우리 군대가 {our_state.GetName} 와 {their_state.GetName} 사이 국경지대에 일어났던 충돌에서  {their_country.GetLeader}군에게 명백한 승리를 거뒀습니다. {their_country.GetAdjective}군대는 무너진 전열을 가다듬기 위해 후퇴했으며, 우리 군대는 분쟁지의 통제권을 획득해냈습니다.
+wtt_border_conflict_won_defender.1.a코0=우리의 힘을 똑똑히 봤겠지\!
+wtt_border_conflict_lost_attacker.1.t코0={our_state.GetName}에서의 패배
+wtt_border_conflict_lost_attacker.1.desc코0={their_country.GetLeader}가 통솔하는 병력이 {our_state.GetName} 와 {their_state.GetName}사이 분쟁지역에서 우리 군대를 몰아냈습니다. 우리 군은 분전했으나 아쉽게도 후퇴했으며, 미래에 있을 전투에 대비하기 위해  군대를 재편성중입니다.
+wtt_border_conflict_lost_attacker.1.a코0=가능한 빨리 반격해야만 한다\!
+wtt_border_conflict_lost_defender.1.t코0={our_state.GetName}에서의 패배
+wtt_border_conflict_lost_defender.1.desc코0={their_country.GetLeader}가 통솔하는 병력이 {our_state.GetName} 와 {their_state.GetName}사이 분쟁지역에서 우리 군대를 몰아냈습니다. 우리 군은 분전했으나 아쉽게도 후퇴했으며, 미래에 있을 전투에 대비하기 위해  군대를 재편성중입니다.
+wtt_border_conflict_lost_defender.1.a코0=가능한 빨리 반격해야만 한다\!
+wtt_border_conflict_canceled_attacker.1.t코0={their_state.GetName}에서의 교착
+wtt_border_conflict_canceled_attacker.1.desc코0={our_state.GetName}-{their_state.GetName} 지역을 둘러싼 싸움에서 양측은 상대를 몰아낼 수 없음을 증명하고 멈추어섰습니다. 양국은 약간의 영토를 얻었습니다. {their_country.GetAdjective}'의 군인들이 반대편에 방어 환경을 조성하고 있다는 정찰 보고입니다. 미루어 볼 때 그들은 영토를 유지하려는 것 같으며, 우리의 방어선을 밀어내지는 않을 것 같습니다.
+wtt_border_conflict_canceled_attacker.1.a코0=돌아올 것이다.
+wtt_border_conflict_canceled_defender.1.t코0={their_state.GetName}에서의 교착
+wtt_border_conflict_canceled_defender.1.desc코0={our_state.GetName}-{their_state.GetName} 지역을 둘러싼 싸움에서 양측은 상대를 몰아낼 수 없음을 증명하고 멈추어섰습니다. 양국은 약간의 영토를 얻었습니다. {their_country.GetAdjective}'의 군인들이 반대편에 방어 환경을 조성하고 있다는 정찰 보고입니다. 미루어 볼 때 그들은 영토를 유지하려는 것 같으며, 우리의 방어선을 밀어내지는 않을 것 같습니다.
+wtt_border_conflict_canceled_defender.1.a코0=돌아올 것이다.
+wtt_border_incident_defender_warning.1.t코0={From.GetNameDefCap}가 우리의 국경 위협
+wtt_border_incident_defender_warning.1.desc코0=어제 일찍, {their_country.GetAdjective}의 군인들이 {attacker_state.GetName}의 국경을 넘어 {defender_state.GetName}을(를) 공격하는 것이 목격되었씁니다. 밤새도록 더 많은 {their_country.GetAdjective}군이 지역으로 쏟아져 들어왔으며 우리의 영토에 방어 태세를 갖추었습니다.\n\n{their_country.GetLeader} 사령부 휘하 군이 일으켰던 접경 지대에서 소규모 접전들과 국경 인근에서 발생한 폭력 사건의 뒤를 이은 것입니다.\n\n이번에 {their_country.GetAdjective}군은 여기를 차지하려는 것이 분명합니다. 우리는 가능한 빨리 더 많은 군 병력을 보내 그들의 진격을 주시해야만 합니다.
+wtt_border_incident_defender_warning.1.a코0=모든 병력을 동원하라\!
+wtt_border_conflict_escalate_to_war.1.t코0={From.GetNameDefCap}가 전시 동원 개시
+wtt_border_conflict_escalate_to_war.1.desc코0={From.GetAdjective}군이 {our_state.GetName}로 깊이 침투하려는 대단위 작전을 위해 {their_state.GetName} 내로 쇄도하고 있다는 정찰 보고입니다. {From.GetLeader}에게 충분한 자원이 주어진다면 이 모험을 폭 넓힐 수 있으며, 이 상황은 명백히 휴전선의 국지적인 분쟁이라고 볼 수 없습니다.\n\n전면전이 도래하고 있습니다.
+wtt_border_conflict_escalate_to_war.1.a코0=맞이할 준비를 해야만 한다\!
