--- a/adjacency_rules_l_english.properties
+++ b/adjacency_rules_l_english.properties
@@ -1,24 +1,24 @@
-PERMISSION_CONTESTED코0=Contested
-PERMISSION_CONTESTED_DESC코0=Due to the war of controllers: $SIDE1|H$ vs $SIDE2|H$
-PERMISSION_ENEMY코0=Enemy
-PERMISSION_ENEMY_DESC코0=Due to our rival relations with one of the controllers: $ENEMY|H$
-PERMISSION_FRIEND코0=Friend
-PERMISSION_FRIEND_DESC코0=Due to our friendly relations with one of the controllers: $FRIEND|H$
-PERMISSION_NEUTRAL코0=Neutral
-PERMISSION_NEUTRAL_DESC코0=Due to our neutral relations with all of the controllers.
-PERMISSION_HEADER코0=Permission type $PERMISSION|H$:
-PERMISSION_CURRENT_HEADER코0=Permission type $PERMISSION|H$ (§HCurrent§!):
-PERMISSION_BLOCKED_DUE_TO코0=Permission blocked due to: $REASON$
-PERMISSION_BLOCKED코0=Permission blocked.\n
-PERMISSION_DESC코0= - Armies can pass: $ARMY$\n - Navies can pass: $NAVY$\n - Submarines can pass: $SUBMARINES$\n - Trade can pass: $TRADE$
-SUEZ_CANAL코0=Suez canal
-GIBRALTAR_STRAIT코0=Gibraltar Strait
-DANISH_BELTS_STRAIT코0=The Danish Belts
-PANAMA_CANAL코0=Panama Canal
-KIEL_CANAL코0=Kiel Canal
-BOSPHORUS_STRAIT코0=Bosphorus Strait
-disable_canal_tt코0=§RThis canal has been partly demolished, and must be repaired before it can once again be traversed by ships.§!
-SUEZ_CANAL_BLOCKED코0=Suez Canal Blown
-PANAMA_CANAL_BLOCKED코0=Panama Canal Blown
-SUEZ_CANAL_BLOCKED_FOR_COUNTRY코0=Suez Canal Blocked for {Root.GetName}
-PANAMA_CANAL_BLOCKED_FOR_COUNTRY코0=Panama Canal Blocked for {Root.GetName}
+PERMISSION_CONTESTED코0=분쟁 중
+PERMISSION_CONTESTED_DESC코0=지배국과 전쟁 중\: $SIDE1|H$ vs $SIDE2|H$
+PERMISSION_ENEMY코0=적
+PERMISSION_ENEMY_DESC코0=지배국과의 경쟁 관계\: $ENEMY|H$
+PERMISSION_FRIEND코0=우군
+PERMISSION_FRIEND_DESC코0=지배국과의 우호적 관계\: $FRIEND|H$
+PERMISSION_NEUTRAL코0=중립
+PERMISSION_NEUTRAL_DESC코0=지배국과의 중립 관계를 맺고 있습니다.
+PERMISSION_HEADER코0=허가 유형 $PERMISSION|H$\:
+PERMISSION_CURRENT_HEADER코0=허가 유형 $PERMISSION|H$ (§H현재 유형§\!)\:
+PERMISSION_BLOCKED_DUE_TO코0=불허. 이유\: $REASON$
+PERMISSION_BLOCKED코0=통행 불가.\n
+PERMISSION_DESC코0=- 육군은 지나갈 수 있음\: $ARMY$\n - 해군은 지나갈 수 있음\: $NAVY$\n - 잠수함은 지나갈 수 있음\: $SUBMARINES$\n - 교역선은 지나갈 수 있음\: $TRADE$
+SUEZ_CANAL코0=수에즈 운하
+GIBRALTAR_STRAIT코0=지브롤터 해협
+DANISH_BELTS_STRAIT코0=데니쉬 해협
+PANAMA_CANAL코0=파나마 운하
+KIEL_CANAL코0=킬 운하
+BOSPHORUS_STRAIT코0=보스포루스 해협
+disable_canal_tt코0=§R이 운하는 부분적으로 파괴되어서, 선박들이 통과하려면 이 운하를 수리해야만 합니다\!§\!
+SUEZ_CANAL_BLOCKED코0=수에즈 운하 폭파
+PANAMA_CANAL_BLOCKED코0=파나마 운하 폭파
+SUEZ_CANAL_BLOCKED_FOR_COUNTRY코0={Root.GetName}은(는) 수에즈 운하 통행 불가
+PANAMA_CANAL_BLOCKED_FOR_COUNTRY코0={Root.GetName}은(는) 파나마 운하 통행 불가
