--- a/buildings_l_english.properties
+++ b/buildings_l_english.properties
@@ -1,81 +1,81 @@
-infrastructure코0=Infrastructure
-infrastructure_plural코0=Infrastructure
-infrastructure_desc코0=This building provides the state with improvement of infrastructure. It increases your supply power in strategic regions and increases your divisions' speed.
-arms_factory코0=Military Factory
-arms_factory_plural코0=Military Factories
-arms_factory_desc코0=This building provides the state with industry for production of new military equipment. Can be converted to civilian industry if needed.
-dockyard코0=Naval Dockyard
-dockyard_plural코0=Naval Dockyards
-dockyard_desc코0=This building provides the state with industry for building new ships.
-industrial_complex코0=Civilian Factory
-industrial_complex_plural코0=Civilian Factories
-industrial_complex_desc코0=This building provides the state with industry for production of civilian goods or construction of new buildings. Can be converted to military industry if needed.
-air_base코0=Air Base
-air_base_plural코0=Air Bases
-air_base_desc코0=This building provides the state with deployment for your air forces.
-naval_base코0=Naval Base
-naval_base_plural코0=Naval Bases
-naval_base_desc코1=Extends the range of your fleet and provides repair services for it. Allows overseas supply and export of resources. Higher levels increases the supply throughput.
-bunker코0=Land Fort
-bunker_plural코0=Land Forts
-bunker_desc코0=This building inflicts an attack penalty of $VALUE|+%0$ for each fort level on the attacker in combat. Attacking from multiple directions will reduce forts effect.
-coastal_bunker코0=Coastal Fort
-coastal_bunker_plural코0=Coastal Forts
-coastal_bunker_desc코0=This building inflicts an attack penalty of $VALUE|+%0$ for each fort level on the attacker in naval invasion combat.
-anti_air_building코0=Anti-Air
-anti_air_building_plural코0=Anti-Air
-anti_air_building_desc코0=This building provides the state with protection from enemy bombers and ability to fire at attacking aircraft.
-synthetic_refinery코0=Synthetic Refinery
-synthetic_refinery_plural코0=Synthetic Refineries
-synthetic_refinery_desc코0=This building provides the state with
-synthetic_refinery_amount코0=$VALUE|Y0=$
+infrastructure코0=기반시설
+infrastructure_plural코0=기반시설
+infrastructure_desc코0=이 건물은 해당 주의 기반시설을 증대시킵니다. 전략 지역의 보급력과 사단의 속도를 높입니다.
+arms_factory코0=군수 공장
+arms_factory_plural코0=군수 공장
+arms_factory_desc코0=이 건물은 해당 주에 새 군수장비를 생산할 산업력을  제공합니다. 필요시 민간 산업 시설로 전환할 수 있습니다.
+dockyard코0=해군 조선소
+dockyard_plural코0=해군 조선소
+dockyard_desc코0=이 건물은 해당 주에 새 함선을 건조하기 위한 산업력을 제공합니다.
+industrial_complex코0=민간 공장
+industrial_complex_plural코0=민간 공장
+industrial_complex_desc코0=이 건물은 해당 주에 민간용품의 생산이나 새 건물을 짓기 위한 산업력을 제공합니다.  필요시 군수 산업 시설로 전환할 수 있습니다.
+air_base코0=공군 기지
+air_base_plural코0=공군 기지
+air_base_desc코0=이 건물은 해당 주에 공군을 배치할 수 있도록 합니다.
+naval_base코0=해군 기지
+naval_base_plural코0=해군 기지
+naval_base_desc코1=함대의 작전 범위를 연장하고 수리 서비스를 제공합니다. 해상 보급과 자원의 수출을 가능하게 합니다. 높은 등급일 수록 보급 처리량이 증가합니다.
+bunker코0=요새
+bunker_plural코0=요새
+bunker_desc코0=이 건물은 공격자에게 요새의 등급당 $VALUE|+%0$의  공격 불이익을 줍니다. 다방면에서의 공격은 요새효과를 감소시킵니다.
+coastal_bunker코0=해안 요새
+coastal_bunker_plural코0=해안 요새
+coastal_bunker_desc코0=이 건물은 상륙전에서 공격자에게 요새의 수준당 $VALUE|+%0$의  공격 불이익을 줍니다.
+anti_air_building코0=대공포
+anti_air_building_plural코0=대공포
+anti_air_building_desc코0=이 건물은 해당 주에 적 폭격기에 대한 방호력과 적 항공기에 대한 공격력을 제공합니다. 
+synthetic_refinery코0=합성 정제 공장
+synthetic_refinery_plural코0=합성 정제 공장
+synthetic_refinery_desc코0=이 건물은 해당 주에 다음을 제공함
+synthetic_refinery_amount코0=$VALUE|Y0\=$
 synthetic_refinery_resource코0=£resources_strip|$FRAME$
-radar_station코0=Radar Station
-radar_station_plural코0=Radar Stations
-radar_station_desc코3=Radar allows you to gain intel on enemy troops in nearby states.\nA higher radar level in a state increases the effective range of the radar.\nRadar also provides the state with better detection of enemy air forces, giving your planes a better chance to engage them.\nIn addition the radars are increasing detection of enemy fleets at sea.
-rocket_site코0=Rocket Site
-rocket_site_plural코0=Rocket Sites
-rocket_site_desc코0=This building provides the state with deployment for produced rockets.
-nuclear_reactor코0=Nuclear Reactor
-nuclear_reactor_plural코0=Nuclear Reactors
-nuclear_reactor_desc코0=This building provides the state with production of enriched Uranium for use in Nuclear weapons.
-BUILDING_BOMBED코0=$BUILDING$ bombed!
-BUILDING_SABOTAGED코0=$BUILDING$ sabotaged!
-BUILDING_REPAIRED코0=$BUILDING$ repaired!
-BUILDING_DAMAGE_REASON_COLLATERAL코0=$BUILDING$ suffered collateral damage!
-NUKE_DROPPED코0=Nuclear bomb dropped!
-BUILDING_DAMAGED코0=Damaged levels: $DAMAGED|-$/$CURRENT|H$
+radar_station코0=레이다 기지
+radar_station_plural코0=레이다 기지
+radar_station_desc코3=레이다는 근처 주에 있는 적군의 정보를 수집할 수 있게 합니다.\n레이다 수준이 높아질수록 주에 자리잡은 레이다의 반경이 증가합니다.\n또한 레이다는 적의 공군력을 탐지해, 여러분의 비행기가 교전하기 좋은 기회를 만들어주기도 합니다.\n더욱이 레이다는 바다 위의 적 함대를 탐지하는 능력도 높아집니다.
+rocket_site코0=로켓 발사장
+rocket_site_plural코0=로켓 발사장
+rocket_site_desc코0=이 건물은 해당 주에 생산된 로켓이 배치될 장소를 제공합니다.
+nuclear_reactor코0=원자로
+nuclear_reactor_plural코0=원자로
+nuclear_reactor_desc코0=이 건물은 해당 주에 핵무기 제조를 위한 농축 우라늄 생산 시설을 제공합니다.
+BUILDING_BOMBED코0=$BUILDING$이(가) 폭격 당했습니다\!
+BUILDING_SABOTAGED코0=$BUILDING$이(가) 파괴 공작을 당했습니다\!
+BUILDING_REPAIRED코0=$BUILDING$이(가) 수리되었습니다\!
+BUILDING_DAMAGE_REASON_COLLATERAL코0=$BUILDING$이(가) 부수적 피해를 입었습니다\!
+NUKE_DROPPED코0=핵폭탄이 떨어졌습니다\!
+BUILDING_DAMAGED코0=파손 등급\: $DAMAGED|-$/$CURRENT|H$
 CAPACITY코0=$VAL$/$MAX$
 CAPACITY_PLUS코0=$VAL$+$PLUS$/$MAX$
-AIR_BASE_LEVEL코0=$NAME|H$: $VAL|Y$
+AIR_BASE_LEVEL코0=$NAME|H$\: $VAL|Y$
 AIR_BASE_LEVEL_UNKNOWN코0=$NAME|H$
-ROCKET_SITE_CAPACITY코0=Capacity: $VAL$/$MAX$
-NAVAL_BASE_LEVEL_UNKNOWN코0=§YNaval base§!
-NAVAL_BASE_LEVEL코0=§YNaval base§!: $VAL|Y$
-NAVAL_BASE_SUPPLY_LIMIT코0=Supply throughput limit: $VAL|Y$
-NAVAL_BASE_CAPACITY코0=Capacity: $USED|1G$/$TOTAL|0G$
-NAVAL_BASE_CAPACITY_OVER코0=Capacity: $USED|1R$/$TOTAL|0R$
-NAVAL_BASE_CAPACITY_PENALTY코0=Repair power capacity penalty: $PENALTY|%0R$
-BUILDING_LEVEL코1=§TState level: $LEVEL|H$§!
-BUILDING_CURRENT_MAX_LEVEL_CAPPED코0=Building current max level limited by:
-BUILDING_CURRENT_MAX_LEVEL_NONCAPPED코0=Building current max level is not limited.
-BUILDING_CURRENT_MAX_LEVEL_CAPPED_MANPOWER코0=State population: $MANPOWER|*Y$
-BUILDING_CURRENT_MAX_LEVEL_CAPPED_POP_PER_LEVEL코0=Population per building level: $POPLEVEL|*Y$
-BUILDING_CURRENT_MAX_LEVEL_CAPPED_BUILDING_MAX_FACTOR코0=State max factor: $MAXFACTOR|%0Y$
-BUILDING_CURRENT_MAX_LEVEL_CAPPED_MIN_MAXLEVEL코0=Min max level due to population: $MAXLEVEL|Y$
-BUILDING_SLOT_REMOVE_BUILDING_LEVEL코0=Remove the building.
-BUILDING_SLOT_REMOVE_CONSTRUCTION_LEVEL코0=Remove a construction level of the building.
-BUILDING_SLOT_REMOVE_CONVERSION_LEVEL코0=Revert the building conversion.
-BUILDING_SLOT_REMOVE_COOLDOWN코0=In wartimes it's only possible to remove buildings once every $DAYS|Y$ days. Next removal can be done at $DATE|Y$.
-CLICK_TO_CONVERT코1=§GClick§! to convert to $BUILDING|Y$
-INSERT_CONVERSION코0=§GCtrl+Click§! to convert and place at the beginning of the queue.
-INSERT_CONSTRUCTION코0=§GCtrl+Click§! to build and place at the beginning of the queue.
-BUILDING_CURRENT_MAX_LEVEL코0=Max level for $BUILDING|Y$: $MAXLEVEL|Y$
-BUILDING_CURRENT_MAX_LEVEL_SHARED_SLOTS코0=Max $BUILDING|Y$ in a State: $MAXLEVEL|Y$
-BUILDING_LEVEL_HEALTH코0=Level health: $VALUE|%2Y$
-AIR_DEFENSE_IN_STATE코0=\n§HTotal bombing damage reduction:§! $TOT|%G$\nAnti-Air: $AA|-%$\n
-RADAR_ONMAP_TOOLTIP코0=§HRadar station§! level: $LVL|G$/$TOT|H$\nBelongs to: $WHO|H$
-RADAR_ONMAP_DAMAGED_TOOLTIP코0=§HRadar station§! level: $LVL|R$/$TOT|H$\nBelongs to: $WHO|H$
-RADAR_ONMAP_TOOLTIP_COVERAGE코0=\n§HRegions coverage:§!
-RADAR_ONMAP_TOOLTIP_COVERAGE_ENTRY코0=\n  $PERC|%$ in $REGION$
-RADAR_ONMAP_TOOLTIP_SUPPRESS코0=\nHold §GCtrl§! to §Rsuppress§! this tooltip.
+ROCKET_SITE_CAPACITY코0=용적\: $VAL$/$MAX$
+NAVAL_BASE_LEVEL_UNKNOWN코0=§Y해군 기지§\!
+NAVAL_BASE_LEVEL코0=§Y해군 기지§\!\: $VAL|Y$
+NAVAL_BASE_SUPPLY_LIMIT코0=보급 처리량 제한\: $VAL|Y$
+NAVAL_BASE_CAPACITY코0=용량\: $USED|1G$/$TOTAL|0G$
+NAVAL_BASE_CAPACITY_OVER코0=용량\: $USED|1R$/$TOTAL|0R$
+NAVAL_BASE_CAPACITY_PENALTY코0=수리 능력 피해\: $PENALTY|%0R$ 
+BUILDING_LEVEL코1=§T주 등급\: $LEVEL|H$§\!
+BUILDING_CURRENT_MAX_LEVEL_CAPPED코0=건물 최대 수준 제한\:
+BUILDING_CURRENT_MAX_LEVEL_NONCAPPED코0=건물 최대 수준이 제한되지 않았습니다.
+BUILDING_CURRENT_MAX_LEVEL_CAPPED_MANPOWER코0=주 인구\:  $MANPOWER|*Y$
+BUILDING_CURRENT_MAX_LEVEL_CAPPED_POP_PER_LEVEL코0=건물 수준당 인구\: $POPLEVEL|*Y$
+BUILDING_CURRENT_MAX_LEVEL_CAPPED_BUILDING_MAX_FACTOR코0=주 최대 요소\: $MAXFACTOR|%0Y$
+BUILDING_CURRENT_MAX_LEVEL_CAPPED_MIN_MAXLEVEL코0=인구에 의한 최소 최대 수준\: $MAXLEVEL|Y$
+BUILDING_SLOT_REMOVE_BUILDING_LEVEL코0=건물 철거
+BUILDING_SLOT_REMOVE_CONSTRUCTION_LEVEL코0=건설 중인 건물 철거
+BUILDING_SLOT_REMOVE_CONVERSION_LEVEL코0=건물 전환 복구
+BUILDING_SLOT_REMOVE_COOLDOWN코0=전시에는 $DAYS|Y$일에 한 번 건물을 철거할 수 있습니다. 다음 철거는 $DATE|Y$에 가능합니다. 
+CLICK_TO_CONVERT코1=$BUILDING|Y$을 §G클릭§\!하여 전환 할 수 있습니다
+INSERT_CONVERSION코0=§GCtrl+클릭§\! 하여 대기열의 상단에 공장 전환을 둘 수 있습니다.
+INSERT_CONSTRUCTION코0=§GCtrl+클릭§\! 하여 대기열의 상단에 건설 항목을 둘 수 있습니다.
+BUILDING_CURRENT_MAX_LEVEL코0=최대 수준 $BUILDING|Y$\: $MAXLEVEL|Y$
+BUILDING_CURRENT_MAX_LEVEL_SHARED_SLOTS코0=주에 최대 $BUILDING|Y$\: $MAXLEVEL|Y$
+BUILDING_LEVEL_HEALTH코0=내구도\: $VALUE|%2Y$
+AIR_DEFENSE_IN_STATE코0=\n§H총 폭격 피해 감소량\:§\! $TOT|%G$\n대공포\: $AA|-%$\n
+RADAR_ONMAP_TOOLTIP코0=§H레이다 기지§\! 수준\: $LVL|G$/$TOT|H$\n소유국\: $WHO|H$
+RADAR_ONMAP_DAMAGED_TOOLTIP코0=§H레이다 기지§\! 수준\: $LVL|R$/$TOT|H$\n소유국\: $WHO|H$
+RADAR_ONMAP_TOOLTIP_COVERAGE코0=\n§H지역 범위\:§\!
+RADAR_ONMAP_TOOLTIP_COVERAGE_ENTRY코0=\n  $PERC|%$ 내 $REGION$
+RADAR_ONMAP_TOOLTIP_SUPPRESS코0=\n§GCtrl§\!를 눌러 이 툴팁을 §R숨깁니다§\!.
