--- a/designer_l_english.properties
+++ b/designer_l_english.properties
@@ -1,77 +1,77 @@
-DESIGNER_LOCKED코0=§RLocked§!
-DESIGNER_ADD코0=§GClick to add§!
-DESIGNER_CHANGE코0=§GClick to change§!
-DESIGNER_DUPLICATE_TO_MODIFY코0=§RDuplicate template to modify§!
+DESIGNER_LOCKED코0=§R잠김§\!
+DESIGNER_ADD코0=§G클릭으로 추가§\!
+DESIGNER_CHANGE코0=§G클릭으로 변경§\!
+DESIGNER_DUPLICATE_TO_MODIFY코0=§R수정 사항이 중복된 편제입니다§\!
 DESIGNER_UNLOCK코0=$VALUE|H0$ £army_experience
-DESIGNER_REPLACE_DESC코0=Cost $VALUE|H0$ £army_experience  to replace
-DESIGNER_ADD_DESC코0=Cost $VALUE|H0$ £army_experience  to add
-DESIGNER_REMOVE_DESC코0=Cost $VALUE|H0$ £army_experience  to remove
-DESIGNER_REMOVE_NO_COST코0=No cost remove
-DESIGNER_NO_COST코0=No cost to replace
-DESIGNER_REMOVE_NEGATIVE_DESC코0=Remove to gain $VALUE|H0$ £army_experience
-DESIGNER_REMOVE코0=Remove
-DESIGNER_BASE_STATS_LABEL코0=Base Stats
-DESIGNER_COMBAT_STATS_LABEL코0=Combat Stats
-DESIGNER_EQUIPMENT_STATS_LABEL코0=Equipment Cost
-DESIGNER_COMBATWIDTH코0=Combat width: 
-DESIGNER_COMBATWIDTH_DESC코0=Combat Width tells you how much room this division will take up in combat. For example if a combat has a total width of §Y80§! you can fit §Y4§! divisions with width of §Y20§!
-DESIGNER_MANPOWER코0=Manpower: 
-DESIGNER_MANPOWER_DESC코0=How much Manpower is required to fill up this division.
-DESIGNER_TRAINING_TIME코0=Training time: 
-DESIGNER_TRAINING_TIME_DESC코0=How long it takes to train a division.
+DESIGNER_REPLACE_DESC코0=교체 비용 $VALUE|H0$ £army_experience
+DESIGNER_ADD_DESC코0=추가 비용 $VALUE|H0$ £army_experience
+DESIGNER_REMOVE_DESC코0=제거 비용 $VALUE|H0$ £army_experience
+DESIGNER_REMOVE_NO_COST코0=비용 없이 제거
+DESIGNER_NO_COST코0=비용 없이 교체
+DESIGNER_REMOVE_NEGATIVE_DESC코0=제거로 돌려받음 $VALUE|H0$ £army_experience
+DESIGNER_REMOVE코0=제거
+DESIGNER_BASE_STATS_LABEL코0=기본 능력
+DESIGNER_COMBAT_STATS_LABEL코0=전투 능력
+DESIGNER_EQUIPMENT_STATS_LABEL코0=장비 비용
+DESIGNER_COMBATWIDTH코0=전장 너비\:
+DESIGNER_COMBATWIDTH_DESC코0=전장 너비는 당신에게 이 사단이 전투에서 얼마나 많은 공간을 차지하는지를 말해줍니다. 예를 들어 만약 한 전투의 총 전장 너비가 §Y80§\!이면 당신은 전장너비가 §Y20§\!인 사단 §Y4§\!개를 투입시킬 수 있습니다
+DESIGNER_MANPOWER코0=인력\:
+DESIGNER_MANPOWER_DESC코0=이 사단을 형성하기 위해 얼마나 많은 인력이 필요한지 나타냅니다.
+DESIGNER_TRAINING_TIME코0=훈련 시간\:
+DESIGNER_TRAINING_TIME_DESC코0=사단 훈련이 얼마나 오래 걸리는지 나타냅니다.
 DESIGNER_NO_STAT코0=--
-DESIGNER_CREATE_NEW_DIVISION코1=Create Empty
-DESIGNER_NEW_DIVISION코0=New Division
-DESIGNER_DEFAULT_DIVISION코1=$DOMINANT_UNIT$ template $NUMBER$
-DESIGNER_DUPLICATE코0=Duplicate
-DESIGNER_DUPLICATE_DESC코0=Duplicating of division template will create a copy of the current division template for §GFree§!. Good to use if you want to create a new specific template based on current one.
-DESIGNER_NO_XP코0=No experience points to spend
-DESIGNER_EXPENSIVE코0=Design is too expensive
-DESIGNER_NOT_ENOUGH_SPECIAL_FORCES코0=Design change would put us over the Special Forces limit
-DESIGNER_NO_CHANGES코0=§TNo changes to save§!
-DESIGNER_ARMY_SAVE코1=Save £army_experience $VALUE|Y0$
-DESIGNER_NAVY_SAVE코1=Save £navy_experience $VALUE|Y0$
-DESIGNER_AIR_SAVE코1=Save £air_experience $VALUE|Y0$
-DESIGNER_INFANTRY_LABEL코0=Infantry
-DESIGNER_INFANTRY_RATIO코0=Infantry: $VALUE|%Y$
-DESIGNER_ARMORED_LABEL코0=Armored
-DESIGNER_ARMORED_RATIO코0=Armored: $VALUE|%Y$
-DESIGNER_RESET코0=Reset
-DESIGNER_RESET_DESC코0=Reset current changes that was done to the division template.
+DESIGNER_CREATE_NEW_DIVISION코1=빈 사단설계 생성
+DESIGNER_NEW_DIVISION코0=신규 사단
+DESIGNER_DEFAULT_DIVISION코1=$DOMINANT_UNIT$ 편제 $NUMBER$
+DESIGNER_DUPLICATE코0=복제
+DESIGNER_DUPLICATE_DESC코0=사단 편제를 복제하면 똑같은 편제 하나가 §G비용없이§\! 만들어 집니다. 기존 편제를 바탕으로 한 새로운 편제를 구성하고자 할 경우 유용합니다.
+DESIGNER_NO_XP코0=사용가능한 경험치가 없습니다.
+DESIGNER_EXPENSIVE코0=편제 설계가 너무 비쌉니다
+DESIGNER_NOT_ENOUGH_SPECIAL_FORCES코0=편제 설계를 변경하면, 특수부대 수용제한을 넘게 됩니다.
+DESIGNER_NO_CHANGES코0=§T저장할 변경사항이 없습니다§\!
+DESIGNER_ARMY_SAVE코1=저장 £army_experience $VALUE|Y0$
+DESIGNER_NAVY_SAVE코1=저장 £navy_experience $VALUE|Y0$
+DESIGNER_AIR_SAVE코1=저장 £air_experience $VALUE|Y0$
+DESIGNER_INFANTRY_LABEL코0=보병
+DESIGNER_INFANTRY_RATIO코0=보병\: $VALUE|%Y$
+DESIGNER_ARMORED_LABEL코0=기갑
+DESIGNER_ARMORED_RATIO코0=기갑\: $VALUE|%Y$
+DESIGNER_RESET코0=초기화
+DESIGNER_RESET_DESC코0=사단편제에 현재 변경된 것을 초기화
 DESIGNER_ARMY_EXPERIENCE코0=$VALUE|Y$ £army_experience
 DESIGNER_NAVY_EXPERIENCE코0=$VALUE|Y$ £navy_experience
 DESIGNER_AIR_EXPERIENCE코0=$VALUE|Y$ £air_experience 
-DESIGNER_CREATE_VARIANT코0=Create Variant
-DESIGNER_MODIFY_VARIANT코0=Modify Variant
-DESIGNER_RENAME코0=Rename
-DIVISION_DIVISION코0=Division Designer
-CURRENT_EXPERIENCE코0=Current experience points
-DESIGNER_OPTION_CHANGE_EFFECTS코0=Selecting this option will affect:
-COMBAT_HEADER코0=Combat
-SUPPORT_HEADER코0=Support
-NO_INTERSECTED_EQUIPMENT_TITLE코0=Dangerous modification
-NO_INTERSECTED_EQUIPMENT_DESC코0=This modification will cause §RDISBANDING§! of existing divisions with this template. There is no equipment intersection between modified and original template.
-REGIMENT_WINDOW_DESC코0=Make a selection to change or add battalion
-PRODUCTION_RESOURCE_DESC코0=Resources that are needed for one factory to produce this equipment with highest efficiency.
-DIVISION_PRODUCTION_RESOURCE_DESC코0=Resources that will be used for equipment production for this template.
-DIVISION_PRODUCTION_COST_DESC코0=This is the §YMinimal§! and §YMaximal§! production cost for the current division.
-DIVISION_PRODUCTION_COST_SINGLE_VAL코0=Estimated Production Cost: £production_cost£$VALUE|0$
-DIVISION_PRODUCTION_COST_VAL코0=Estimated Production Cost: £production_cost£$MINVALUE|0$ to £production_cost£$MAXVALUE|0$
-DIVISION_MODIFICATION_HEADER코1=This template change will impact $AMOUNT|H$ divisions.
-DIVISION_MODIFICATION_NEED_NOT_FILLED코1=\t- $AMOUNT|H0$ additional $EQUIPMENT|H$ needed to fill divisions ( §R$STOCK_AMOUNT|H0^$ available§! )
-DIVISION_MODIFICATION_NEED_FILLED코1=\t- $AMOUNT|H0$ additional $EQUIPMENT|H$ needed to fill divisions ( $STOCK_AMOUNT|H0^$ available )
-DIVISION_MODIFICATION_LESS_EQUIPMENT_NEEDED코0=\t- $AMOUNT|H0$ less $EQUIPMENT|H$ needed to fill divisions
-SELECTED_SUBUNIT코0=§G(Currently selected)§!
-DESIGNER_TEMPLATE_NAME_TIP코0=Division based on $NAME|Y$ template
-DESIGNER_EMPTY_REGIMENT코0=§RYou need to add a Combat battalion to create a new Division Template§!
-DESIGNER_EMPTY_NAME코0=§RDivision template should not have empty name§!
-DESIGNER_SUPPORT_COLUMN_TITLE코1=Support Companies. These are support troops keep behind the frontline troops and help out.\n\nYou can only select one of each type. Support Companies do not affect the §YMax Speed§! of the Division (other than through terrain bonuses), and do not increase its §YCombat Width§!.
-DESIGNER_MAIN_COLUMN_TITLE코2=Line Battalions are your frontline troops.\n\nEach column is a Regiment of a specific base type like §YArmor§!, §YInfantry§! or §YMotorized Troops§!. The topmost type decides what else you can put in that Regiment column. The more Line Battalions you have the bigger your §YCombat Width§! and the fewer of these divisions you will be able to fit into the same battle.
-REINFORCE_WITH_RESEARCHED_EQUIPMENT코0=Activate to reinforce with newly researched equipment
-REINFORCE_WITH_EQUIPMENT코0=Activate to reinforce with this equipment
-DESIGNER_EQUIPMENT_CHANGE코2=$UNITS|Y$ divisions are using this template.\nThe requirements for $EQ|Y$ will change by $TOT|R$ in total.\nWe have $STOCK|Y$ in storage.\nIf we accept the changes to this template, we estimate to have $END$ in storage.
-DIVISION_NAMES_GROUP_LIST_HEADER코0=§HExample names:§!
+DESIGNER_CREATE_VARIANT코0=파생형 생성
+DESIGNER_MODIFY_VARIANT코0=파생형 수정
+DESIGNER_RENAME코0=이름 변경
+DIVISION_DIVISION코0=사단 설계
+CURRENT_EXPERIENCE코0=현재 경험치 점수
+DESIGNER_OPTION_CHANGE_EFFECTS코0=이 옵션을 선택함으로서 얻는 효과\:
+COMBAT_HEADER코0=전투
+SUPPORT_HEADER코0=지원
+NO_INTERSECTED_EQUIPMENT_TITLE코0=위험한 변경
+NO_INTERSECTED_EQUIPMENT_DESC코0=이 변경은 이 편제를 사용하는 배치된 사단이 §R해산§\!되는 문제를 발생시킵니다.  원래 편제와 변경되는것 간에 겹치는 장비는 없습니다.
+REGIMENT_WINDOW_DESC코0=대대를 변경하거나 추가하기 위해 선택하세요
+PRODUCTION_RESOURCE_DESC코0=이 장비를 최대 효율로 생산하기 위해 공장 하나가 필요로 하는 자원
+DIVISION_PRODUCTION_RESOURCE_DESC코0=이 사단 편제를 위한 장비를 생산하는데 소모될 자원들.
+DIVISION_PRODUCTION_COST_DESC코0=현재 사단의 §Y최소§\!와 §Y최대§\! 생산비용 입니다.
+DIVISION_PRODUCTION_COST_SINGLE_VAL코0=예상 생산비용\: £production_cost£$VALUE|0$
+DIVISION_PRODUCTION_COST_VAL코0=예상 생산비용\: £production_cost£$MINVALUE|0$에서 £production_cost£$MAXVALUE|0$
+DIVISION_MODIFICATION_HEADER코1=이 편제 변경은 $AMOUNT|H$개 사단에 영향을 줄 것입니다.
+DIVISION_MODIFICATION_NEED_NOT_FILLED코1=\t- $EQUIPMENT|H$이(가) $AMOUNT|H0$개 추가로 사단에 필요합니다 ( §R사용가능 비축분 $STOCK_AMOUNT|H0^$개§\! )
+DIVISION_MODIFICATION_NEED_FILLED코1=\t- $EQUIPMENT|H$이(가) $AMOUNT|H0$개 추가로 사단에 필요합니다 ( 사용가능 비축분 $STOCK_AMOUNT|H0^$개 )
+DIVISION_MODIFICATION_LESS_EQUIPMENT_NEEDED코0=\t- $EQUIPMENT|H$이(가) $AMOUNT|H0$개를 사단에 덜 필요로 합니다
+SELECTED_SUBUNIT코0=§G(현재 선택됨)§\!
+DESIGNER_TEMPLATE_NAME_TIP코0=$NAME|Y$ 편제를 따르는 사단
+DESIGNER_EMPTY_REGIMENT코0=§R새 사단 편제를 만들기 위해 전투대대를 추가해야 합니다§\!
+DESIGNER_EMPTY_NAME코0=§R사단편제 명칭을 지정해야 합니다§\!
+DESIGNER_SUPPORT_COLUMN_TITLE코1=보급 중대. 이들은 전방 부대의 뒤를 지키며 그들의 원활한 전투를 돕습니다.\n\n오직 하나의 유형만 선택할 수 있습니다. 지원 중대는 사단의 §Y최고 속도§\!에 영향을 미치지 않으며, (지형에 의한 혜택을 제외하고), §Y전장 너비§\!를 넓히지도 않습니다.
+DESIGNER_MAIN_COLUMN_TITLE코2=전열 대대는 최전선의 부대입니다.\n\n각 줄은 §Y기갑§\!, §Y보병§\! 또는 §Y차량화 부대§\!와 같은 특정한 유형의 연대가 배치됩니다. 가장 높이 배치된 유형이 어떤 연대를 더 넣을지 결정하게 됩니다. 더 많은 전열 대대는 §Y전장 너비§\!를 크게 만들고 사단 중 적은 수만으로도 같은 전투에서 딱 들어맞게 됩니다.
+REINFORCE_WITH_RESEARCHED_EQUIPMENT코0=최신 개발 장비로 충원 활성화
+REINFORCE_WITH_EQUIPMENT코0=이 장비로 충원 활성화
+DESIGNER_EQUIPMENT_CHANGE코2=$UNITS|Y$ 사단들은 이 편제를 사용하고 있습니다.\n$EQ|Y$을(를) 위한 보급품량은 $TOT|R$으로 바뀝니다.\n우리는 $STOCK|Y$ 만큼의 비축량을 가지고 있습니다.\n만약 이렇게 설계 변경을 하게 되면, 비축이 될 때까지 $END$로 예상됩니다. 
+DIVISION_NAMES_GROUP_LIST_HEADER코0=§H이름 예시\:§\!
 DIVISION_NAMES_GROUP_LIST_ENTRY코0=\n  $NAME$
 DIVISION_NAMES_GROUP_LIST_ENTRY_ETC코0=\n  ...
-DIVISION_NAMES_GROUP_LIST_ENTRY_FALLBACK코0=\n\n§HFallback name:§!\n  $NAME$
-DIVISION_NAMES_GROUP_DESC코0=§HHistorical division names group.§!\nAll divisions of this template, will use the names from this pool. If you change the group right now, all divisions of this current template will be renamed, except those you have named yourself.
+DIVISION_NAMES_GROUP_LIST_ENTRY_FALLBACK코0=\n\n§H대체명\:§\!\n  $NAME$
+DIVISION_NAMES_GROUP_DESC코0=§H역사적인 사단 명칭 목록.§\!\n이 편제에 해당하는 모든 사단은 목록에 적힌 명칭을 사용하게 됩니다. 당장 목록을 변경한다면, 직접 이름붙인 사단을 제외한 현재 편제에 해당하는 모든 사단이 재명명될 것입니다.
