--- a/frontend_l_english.properties
+++ b/frontend_l_english.properties
@@ -1,185 +1,185 @@
-MATCHMAKING_FILTER_NOPASSWORD코0=No password
-MATCHMAKING_FILTER_NOTFULL코0=Not Full
-MATCHMAKING_FILTER_HASPLAYERS코0=Has Players
-MATCHMAKING_FILTER_MOD코0=MOD
-MATCHMAKING_FILTER_VERSION코0=Version
-MATCHMAKING_SERVER_FILTER_NAME코0=Name
-MATCHMAKING_SERVER_FILTER_SEARCH코0=Tags
-MATCHMAKING_SERVERS_DOSEARCH코0=Search
-MATCHMAKING_SERVERS_DOFILTERS코0=Filter
-MATCHMAKING_QUICK_REFRESH코0=Quick refresh
-MATCHMAKING_REFRESH_LAN코0=Refresh LAN
-MATCHMAKING_REFRESH_LAN_STOP코0=Stop
-MATCHMAKING_REFRESH_INTERNET코0=Refresh Internet
-MATCHMAKING_JOIN_SERVER코0=Join
-MATCHMAKING_HOST_SERVER코0=Host
-MATCHMAKING_SERVER_PASSWORD코0=Password
-MATCHMAKING_SERVER_NAME코0=Name
-MATCHMAKING_SERVER_SLOTS코0=Slots
-MATCHMAKING_SERVER_VERSION코0=Version
-MATCHMAKING_SERVER_TAGS코0=Tags
-MATCHMAKING_SERVER_HOST_TAGS코0=Server Tags
-MATCHMAKING_SERVER_HOST_TITLE코0=Host Server
-MATCHMAKING_SERVER_MOD코0=MOD
-MATCHMAKING_SERVER_STATUS코0=Status
-MATCHMAKING_CLIENT_STATUS코0=Status:
-MATCHMAKING_CLIENT_STATUS_IDLE코0=Idle
-MATCHMAKING_CLIENT_STATUS_SCAN코0=Scanning...
-MATCHMAKING_SERVER_DESC코0=Server Description
-MATCHMAKING_SERVER_CONNECT_TITLE코0=Connect to Server ID
-MATCHMAKING_SERVER_CONNECT_ADDRESS코0=Server ID
-MATCHMAKING_TITLE코0=Multiplayer
-MATCHMAKING_SERVERS코0=Servers
-MATCHMAKING_COMMUNITY코0=Community
-MATCHMAKING_SERVER_STATUS_STARTING코0=Starting
-MATCHMAKING_SERVER_STATUS_RUNNING코0=Running
-MATCHMAKING_SERVER_STATUS_STOPPED코0=Stopped
-MATCHMAKING_SERVERS_NOSERVERS코0=No servers found.
-MATCHMAKING_SERVERS_SEARCHING코0=Searching...
-MATCHMAKING_SERVER_KICKED코0=Kicked from server.
-MATCHMAKING_SERVER_BANNED코0=Banned from server.
-MATCHMAKING_SERVER_BADVERSION코0=The host has another version of the game
-MATCHMAKING_SERVER_HOTJOIN_DECLINED코0=Server has declined the join request
-MATCHMAKING_SERVER_NAME_TAKEN코0=Your name is already taken.
-MATCHMAKING_SORT_BY_PASSWORD코0=Sort by Password
-SORT_BY_NAME코0=Sort by Name
-MATCHMAKING_SORT_BY_MOD코0=Sort by MOD
-MATCHMAKING_SORT_BY_VERSION코0=Sort by Version
-MATCHMAKING_SORT_BY_TAGS코0=Sort by Tags
-MATCHMAKING_SORT_BY_SLOTS코0=Sort by Slots
-MATCHMAKING_SORT_BY_STATUS코0=Sort by Status
-MATCHMAKING_FILTER_NAMES코0=Filter by name
-MATCHMAKING_FILTER_TAGS코0=Filter by tags
-SM_OPTIONS코0=Options
-SM_GAME코0=Game
-SM_VIDEO코0=Video
-SM_AUDIO코0=Audio
-SM_CONTROLS코0=Controls
-SM_MASTER_VOLUME코0=Master Volume
-SM_EFFECT_VOLUME코0=Effect Volume
-SM_MUSIC_VOLUME코0=Music Volume
-SM_SCROLL_SPEED코0=Scroll Speed
-SM_ZOOM_SPEED코0=Zoom Speed
-SM_MOUSE_SPEED코0=Mouse Speed
-SM_MODE코0=Mode
-SM_RESOLUTION코0=Resolution
-SM_REFRESH_RATE코0=Refresh Rate
-SM_GAMMA코0=Gamma
-SM_GAMMA_TOOLTIP코2=Enabled in fullscreen mode
-SM_SHADOWS코0=Shadows
-SM_WINDOWED코0=Windowed
-SM_FULLSCREEN코0=Fullscreen
-SM_BORDERLESS코0=Borderless
-SM_NATIVE코0=Desktop
-SM_TREES코0=3D Trees
-SM_SKIP_SETUP코0=Skip simple setup
-SM_DECORATIVE_MAPITEMS코0=Decorative Map Items
-SM_DIFFICULTY코0=Difficulty
-SM_AUTOSAVE_INTERVAL코0=Autosave Interval
-SM_APPLY코0=Apply
-SM_ALERT코0=Alert
-SM_RESTART코0=You need to restart for the change to take effect.
-SM_WP코0=Error writing to the settings-file. Check that the file is not write protected and try again
-SM_MULTISAMPLE코0=Multisample Level
-SM_AMBIENT_OBJECTS코0=Ambient Objects
-SM_VOICE_VOLUME코0=Voice Volume
-SM_VSYNC코0=VSync
-SM_WEATHER코0=Weather
-SM_WATER_REFL코0=Reflections
-SM_TEX_QUALITY코0=Texture Quality
-SM_TEX_QUALITY_LOW코0=Low
-SM_TEX_QUALITY_MEDIUM코0=Medium
-SM_TEX_QUALITY_HIGH코0=High
-SM_UI_SCALING코0=UI Scaling (Experimental)
-SM_CITIES코0=Cities
-SM_UNITS코0=3D Units
-SM_BUILDINGS코0=3D Buildings
-SM_RIVERS코0=Rivers
-SM_HIGH_GFX_SHADERS코0=High quality pixel shaders
-SM_FULL_MAP_RES코0=Full rendering resolution
-RESTART_REQ코0=Restart Required
-RESTART_REQ_DESC코0=You must restart the game for these changes to take effect.
-NEVER코0=Never
-MONTHLY코0=Monthly
-HALFYEAR코0=Half Year
-YEARLY코0=Yearly
-FE_HOTJOIN_LABEL코0=Hotjoin
-FE_COOP_LABEL코0=Cooperative
-FE_COOP_LABEL_DESC코0=Enables multiple players controlling 1 nation
-FE_HOTJOIN_TOOLTIP코0=Allow players to hotjoin
-FE_COOP_TOOLTIP코0=Allow players to play the same country
-HINTS_ACTIVE코0=Hints Active
-NATO_COUNTERS코0=Use NATO symbols
-PAUSE_ON_POPUPS코0=Pause on notifications
-PAUSE_ON_POPUPS_DESC코0=Pause on popup notifications. Will not affect events.
-EXTERNAL_BROWSER코0=Use external web browser
-HOME_WIKI코0=Use offline wiki as default
-BAD_SERVER_PASSWORD코0=Password incorrect
-PLAYER_BANNED코0=$NAME$ was banned by the host.
-PLAYER_KICKED코0=$NAME$ was kicked by the host.
-FE_START코0=START
-FE_YES코0=Yes
-FE_NO코0=No
-YES코0=Yes
-NO코0=No
-FE_DIFFICULTY_CUSTOM코0=Custom Settings
-FE_DIFFICULTY_CUSTOM_BTN코0=Custom
-FE_DIFFICULTY코0=Difficulty
-FE_DIFFICULTY_VERY_EASY코0=Civilian
-FE_DIFFICULTY_VERY_EASY_TOOLTIP코0=§L"We Can Do It!"§!
-FE_DIFFICULTY_EASY코1=Recruit
-FE_DIFFICULTY_EASY_TOOLTIP코0=§L"I have full confidence in your courage, devotion to duty, and skill in battle. We will accept nothing less than full victory. Good Luck!"§!
-FE_DIFFICULTY_NORMAL코1=Regular
-FE_DIFFICULTY_NORMAL_TOOLTIP코0=§L"For the enemy is strong. He may hurl back our forces. Success may not come with rushing speed, but we shall return again and again."§!
-FE_DIFFICULTY_HARD코1=Veteran
-FE_DIFFICULTY_HARD_TOOLTIP코1=§L"Thirty years from now when you're sitting by your fireside with your grandson on your knee and he asks, 'What did you do in the great World War Two?' you won't have to cough and say, 'Well, your granddaddy shoveled shit in Louisiana.'"§!
-FE_DIFFICULTY_VERY_HARD코0=Elite
-FE_DIFFICULTY_VERY_HARD_TOOLTIP코1=§L"I have nothing to offer but blood, toil, tears, and sweat."§!
-FE_DIFFICULTY_UNKNOWN코0=Secret Difficulty
-FE_DIFFICULTY_MODIFIER_PLAYER_TOOLTIP코0=\n\nPlayer:\n$PLAYERMOD$
-FE_DIFFICULTY_MODIFIER_AI_TOOLTIP코0=\n\nAI:\n$AIMOD$
-FE_IRONMAN_MP_BLOCKED코0=§RIronman mode cannot be played in multiplayer.§!
-FE_CUSTOM_DIFFICULTY_TOOLTIP코0=Applied to: $COUNTRIES$\n$MODIFIER$
-FE_RESET코0=Reset All
-DAILY코0=Daily
-WEEKLY코0=Weekly
-GAMESETUP_SELECT_SCENARIO코0=Select a Scenario or Load a game
-INTERESTING_COUNTRIES_OTHER_COUNTRIES코0=Other countries
-CHAT_WHISPER_TO코0=To $NAME|H$
-CHAT_SYSTEM코0=System Message
-CHAT_ERROR_UNKNOWNUSER코0=Unknown User.
-FE_CHANGE_SCENARIO_ONLY_SERVER코0=§RMay only be changed by the host§!
-ACHIEVEMENTS_CHEATS코0=No cheats or modified game/save
-ACHIEVEMENTS_DIFFICULTY코0=Regular or higher difficulty
-ACHIEVEMENTS_OK코0=§HCan get Achievements!§!
-ACHIEVEMENTS_NOT_OK코0=§RCan not currently get Achievements.§!
-diff_strong_ai_generic코0=Stronger AI
-custom_diff_strong_ger코0=Strengthen Germany
-custom_diff_strong_ita코0=Strengthen Italy
-custom_diff_strong_sov코0=Strengthen Soviet
-custom_diff_strong_fra코0=Strengthen France
-custom_diff_strong_eng코0=Strengthen United Kingdom
-custom_diff_strong_usa코0=Strengthen USA
-custom_diff_strong_jap코0=Strengthen Japan
-custom_diff_strong_chi코0=Strengthen China
-achievement_has_joined_faction코0=Has joined a faction
-achievement_has_dropped_nuke코0=Has used a nuclear bomb
-achievement_france_surrender코0=France has surrendered
-achievement_won_spanish_civil_war코0=Won the Spanish Civil War
-achievement_failed_sunset_invasion코0=Did not follow the Sunset Invasion rules
-achievement_has_nuked_california코0=Has dropped a nuclear bomb in California
-achievement_med_plutonium코0=Has dropped a nuclear bomb on Denmark.
-POL_vojtek_commander코0=Discovered how to trigger this achievement.
-SAF_released_ANG코0=Released Angola
-SAF_released_MZB코0=Released Mozambique
-SAF_released_BOT코0=Released Botswana
-SAF_released_ZIM코0=Released Zimbabwe
-SAF_released_KEN코0=Released Kenya
-SAF_released_COG코0=Released Congo
-achievement_AST_nuke_self코0=Has dropped nuke on Australian core territory.
-achievement_EGY_colony코0=Reached Colony Status
-achievement_EGY_dominion코0=Reached Dominion Status
-achievement_EGY_free코0=Reached Freedom Status
-ROM_lost_starting_state코0=Romania lost one of its starting states
-YUG_delcared_war_on_axis_allies코0=Declared war on Axis or Allies while in either Axis or Allies
-achievement_carol_II_is_leader코0=§YCarol II§! is the current country leader
+MATCHMAKING_FILTER_NOPASSWORD코0=암호 없음
+MATCHMAKING_FILTER_NOTFULL코0=자리 있음
+MATCHMAKING_FILTER_HASPLAYERS코0=플레이어 있음
+MATCHMAKING_FILTER_MOD코0=모드
+MATCHMAKING_FILTER_VERSION코0=버전
+MATCHMAKING_SERVER_FILTER_NAME코0=이름
+MATCHMAKING_SERVER_FILTER_SEARCH코0=태그
+MATCHMAKING_SERVERS_DOSEARCH코0=검색
+MATCHMAKING_SERVERS_DOFILTERS코0=필터
+MATCHMAKING_QUICK_REFRESH코0=빠른 새로고침
+MATCHMAKING_REFRESH_LAN코0=LAN 새로고침
+MATCHMAKING_REFRESH_LAN_STOP코0=중지
+MATCHMAKING_REFRESH_INTERNET코0=인터넷 새로고침
+MATCHMAKING_JOIN_SERVER코0=참여
+MATCHMAKING_HOST_SERVER코0=호스트
+MATCHMAKING_SERVER_PASSWORD코0=암호
+MATCHMAKING_SERVER_NAME코0=이름
+MATCHMAKING_SERVER_SLOTS코0=슬롯
+MATCHMAKING_SERVER_VERSION코0=버전
+MATCHMAKING_SERVER_TAGS코0=태그
+MATCHMAKING_SERVER_HOST_TAGS코0=서버 태그
+MATCHMAKING_SERVER_HOST_TITLE코0=호스트 서버
+MATCHMAKING_SERVER_MOD코0=모드
+MATCHMAKING_SERVER_STATUS코0=상태
+MATCHMAKING_CLIENT_STATUS코0=상태\:
+MATCHMAKING_CLIENT_STATUS_IDLE코0=대기
+MATCHMAKING_CLIENT_STATUS_SCAN코0=탐색 중...
+MATCHMAKING_SERVER_DESC코0=서버 설명
+MATCHMAKING_SERVER_CONNECT_TITLE코0=서버 ID로 연결
+MATCHMAKING_SERVER_CONNECT_ADDRESS코0=서버 ID
+MATCHMAKING_TITLE코0=여럿이서 하기
+MATCHMAKING_SERVERS코0=서버
+MATCHMAKING_COMMUNITY코0=커뮤니티
+MATCHMAKING_SERVER_STATUS_STARTING코0=시작중
+MATCHMAKING_SERVER_STATUS_RUNNING코0=진행중
+MATCHMAKING_SERVER_STATUS_STOPPED코0=중단됨
+MATCHMAKING_SERVERS_NOSERVERS코0=서버를 찾지 못함.
+MATCHMAKING_SERVERS_SEARCHING코0=찾는 중...
+MATCHMAKING_SERVER_KICKED코0=서버로부터 추방 됨.
+MATCHMAKING_SERVER_BANNED코0=서버로부터 차단 됨.
+MATCHMAKING_SERVER_BADVERSION코0=호스트의 게임 버전이 다릅니다
+MATCHMAKING_SERVER_HOTJOIN_DECLINED코0=서버가 참가 요청을 거부 했습니다
+MATCHMAKING_SERVER_NAME_TAKEN코0=이미 사용 중인 이름입니다.
+MATCHMAKING_SORT_BY_PASSWORD코0=암호로 정렬
+SORT_BY_NAME코0=이름으로 정렬
+MATCHMAKING_SORT_BY_MOD코0=MOD로 정렬
+MATCHMAKING_SORT_BY_VERSION코0=버전으로 정렬
+MATCHMAKING_SORT_BY_TAGS코0=태그로 정렬
+MATCHMAKING_SORT_BY_SLOTS코0=슬롯으로 정렬
+MATCHMAKING_SORT_BY_STATUS코0=상태로 정렬
+MATCHMAKING_FILTER_NAMES코0=이름으로 거름
+MATCHMAKING_FILTER_TAGS코0=태그로 거름
+SM_OPTIONS코0=설정
+SM_GAME코0=게임
+SM_VIDEO코0=영상
+SM_AUDIO코0=음향
+SM_CONTROLS코0=조작
+SM_MASTER_VOLUME코0=전체 음량
+SM_EFFECT_VOLUME코0=효과음 음량
+SM_MUSIC_VOLUME코0=음악 음량
+SM_SCROLL_SPEED코0=스크롤 속도
+SM_ZOOM_SPEED코0=줌 속도
+SM_MOUSE_SPEED코0=마우스 속도
+SM_MODE코0=창 모드
+SM_RESOLUTION코0=해상도
+SM_REFRESH_RATE코0=주사율
+SM_GAMMA코0=감마
+SM_GAMMA_TOOLTIP코2=전체화면 가능
+SM_SHADOWS코0=그림자
+SM_WINDOWED코0=창모드
+SM_FULLSCREEN코0=전체화면
+SM_BORDERLESS코0=경계 없는 창모드
+SM_NATIVE코0=바탕화면
+SM_TREES코0=3D 나무
+SM_SKIP_SETUP코0=간이 설정을 생략
+SM_DECORATIVE_MAPITEMS코0=지표면의 사물
+SM_DIFFICULTY코0=난이도
+SM_AUTOSAVE_INTERVAL코0=자동 저장 간격
+SM_APPLY코0=적용
+SM_ALERT코0=경고
+SM_RESTART코0=재시작을 해야만 변경사항이 적용 됩니다.
+SM_WP코0=설정 파일에 쓰는 동안 오류가 발생했습니다. 파일에 쓰기 보호되어 있지 않은지 확인하고 다시 시도하십시오
+SM_MULTISAMPLE코0=멀티샘플 레벨
+SM_AMBIENT_OBJECTS코0=배경 음량
+SM_VOICE_VOLUME코0=음성 음량
+SM_VSYNC코0=수직동기화
+SM_WEATHER코0=날씨
+SM_WATER_REFL코0=수면 반사
+SM_TEX_QUALITY코0=텍스처 품질
+SM_TEX_QUALITY_LOW코0=낮음
+SM_TEX_QUALITY_MEDIUM코0=중간
+SM_TEX_QUALITY_HIGH코0=높음
+SM_UI_SCALING코0=UI 스케일링 (실험)
+SM_CITIES코0=도시
+SM_UNITS코0=3D 병력
+SM_BUILDINGS코0=3D 건물
+SM_RIVERS코0=강
+SM_HIGH_GFX_SHADERS코0=고품질 픽셀 셰이더
+SM_FULL_MAP_RES코0=전체 렌더링 해상도
+RESTART_REQ코0=재시작이 필요합니다
+RESTART_REQ_DESC코0=변경사항을 적용하려면 게임을 재시작해야 합니다.
+NEVER코0=하지않음
+MONTHLY코0=매 달
+HALFYEAR코0=반년
+YEARLY코0=매 년
+FE_HOTJOIN_LABEL코0=빠른 참가
+FE_COOP_LABEL코0=협력 플레이
+FE_COOP_LABEL_DESC코0=여러 플레이어가 하나의 국가를 조작 가능하게합니다
+FE_HOTJOIN_TOOLTIP코0=빠른 입장 플레이어 허용
+FE_COOP_TOOLTIP코0=다른 유저가 같은 국가로 플레이 하는 것을 허용
+HINTS_ACTIVE코0=도움말 활성화
+NATO_COUNTERS코0=NATO 단대호 사용
+PAUSE_ON_POPUPS코0=알림 발생 시 일시정지
+PAUSE_ON_POPUPS_DESC코0=팝업 알림 발생 시 일시정지. 이벤트는 영향을 미치지 않을 것입니다.
+EXTERNAL_BROWSER코0=외부 웹 브라우저 사용
+HOME_WIKI코0=오프라인 위키를 기본적으로 사용
+BAD_SERVER_PASSWORD코0=암호 부정확
+PLAYER_BANNED코0=$NAME$가 호스트에게 BAN되었습니다.
+PLAYER_KICKED코0=$NAME$가 호스트에게 강퇴되었습니다.
+FE_START코0=시작
+FE_YES코0=예
+FE_NO코0=아니요
+YES코0=예
+NO코0=아니요
+FE_DIFFICULTY_CUSTOM코0=사용자 설정
+FE_DIFFICULTY_CUSTOM_BTN코0=사용자 설정
+FE_DIFFICULTY코0=난이도
+FE_DIFFICULTY_VERY_EASY코0=민간인
+FE_DIFFICULTY_VERY_EASY_TOOLTIP코0=§L"우리도 할 수 있다\!"§\!
+FE_DIFFICULTY_EASY코1=신병
+FE_DIFFICULTY_EASY_TOOLTIP코0=§L"나는 당신의 용기, 헌신적인 복무, 그리고 전투에서의 기술로 인해 완전히 자신감을 얻었습니다. 우리에게는 완전한 승리만이 있을 것입니다. 행운을 빕니다\!"§\!§\!
+FE_DIFFICULTY_NORMAL코1=정규병
+FE_DIFFICULTY_NORMAL_TOOLTIP코0=§L"적이 강해서, 우리 군대를 후퇴시킬지도 모릅니다. 서두른다고 성공할 수 없기에, 우리는 몇 번이고 다시 돌아올 것입니다"§\!
+FE_DIFFICULTY_HARD코1=숙련병
+FE_DIFFICULTY_HARD_TOOLTIP코1=§L"지금부터 30년 후  난롯가 곁에서 당신의 무릎에 앉아있는 손자가 '제 2차 세계대전 때 어떤 대단한 일을 하셨나요?'하며 물었을 때, 당신은 기침하며 '글쎄, 네 할아버지는 루이지애나에서 똥 때리며 있었단다.'라고 말하지 않고 싶을 것입니다."§\!
+FE_DIFFICULTY_VERY_HARD코0=정예병
+FE_DIFFICULTY_VERY_HARD_TOOLTIP코1=§L"제가 여러분께 드릴 수 있는 것은 피와, 수고와, 눈물, 그리고 땀 뿐입니다."§\!
+FE_DIFFICULTY_UNKNOWN코0=비밀 난이도
+FE_DIFFICULTY_MODIFIER_PLAYER_TOOLTIP코0=\n\n플레이어\:\n$PLAYERMOD$
+FE_DIFFICULTY_MODIFIER_AI_TOOLTIP코0=\n\nAI\:\n$AIMOD$
+FE_IRONMAN_MP_BLOCKED코0=§R철인 모드는 멀티 플레이어에서 활성화할 수 없습니다.§\!
+FE_CUSTOM_DIFFICULTY_TOOLTIP코0=이곳에 적용됨\: $COUNTRIES$\n$MODIFIER$
+FE_RESET코0=전체 초기화
+DAILY코0=매 일
+WEEKLY코0=매 주
+GAMESETUP_SELECT_SCENARIO코0=시나리오를 선택하거나 게임을 불러오기
+INTERESTING_COUNTRIES_OTHER_COUNTRIES코0=다른 국가들
+CHAT_WHISPER_TO코0=$NAME|H$에게
+CHAT_SYSTEM코0=시스템 메세지
+CHAT_ERROR_UNKNOWNUSER코0=알 수 없는 유저
+FE_CHANGE_SCENARIO_ONLY_SERVER코0=§R호스트 이외는 변경할 수 없습니다§\!
+ACHIEVEMENTS_CHEATS코0=치트나 게임 및 저장파일 변경이 되지 않음
+ACHIEVEMENTS_DIFFICULTY코0=일반이나 더 높은 난이도
+ACHIEVEMENTS_OK코0=§H도전과제 달성 가능\!§\!
+ACHIEVEMENTS_NOT_OK코0=§R현재 상태에서는 도전과제를 달성할 수 없습니다.§\!
+diff_strong_ai_generic코0=더 강한 AI
+custom_diff_strong_ger코0=독일 강화
+custom_diff_strong_ita코0=이탈리아 강화
+custom_diff_strong_sov코0=소련 강화
+custom_diff_strong_fra코0=프랑스 강화
+custom_diff_strong_eng코0=영국 강화
+custom_diff_strong_usa코0=미국 강화
+custom_diff_strong_jap코0=일본 강화
+custom_diff_strong_chi코0=중국 강화
+achievement_has_joined_faction코0=이(가) 세력에 가입했습니다
+achievement_has_dropped_nuke코0=이(가) 핵폭탄을 사용했습니다
+achievement_france_surrender코0=프랑스가 항복했습니다
+achievement_won_spanish_civil_war코0=스페인 내전에서 승리했습니다
+achievement_failed_sunset_invasion코0=일몰침략 규정을 지키지 않았습니다
+achievement_has_nuked_california코0=이(가) 캘리포니아에 핵폭탄을 떨어뜨렸습니다.
+achievement_med_plutonium코0=이(가) 덴마크에 핵폭탄을 떨어뜨렸습니다.
+POL_vojtek_commander코0=이 도전과제를 달성하는 방법을 발견했습니다.
+SAF_released_ANG코0=앙골라가 해방되었습니다
+SAF_released_MZB코0=모잠비크가 해방되었습니다
+SAF_released_BOT코0=보츠와나가 해방되었습니다
+SAF_released_ZIM코0=짐바브웨가 해방되었습니다
+SAF_released_KEN코0=케냐가 해방되었습니다
+SAF_released_COG코0=콩고가 해방되었습니다
+achievement_AST_nuke_self코0=이(가) 호주의 핵심 영토에 핵을 떨어뜨렸습니다.
+achievement_EGY_colony코0=식민지 상태 도달
+achievement_EGY_dominion코0=자치령 상태 도달
+achievement_EGY_free코0=자주국 상태 도달
+ROM_lost_starting_state코0=루마니아는 시작 상태 중 하나를 잃었다
+YUG_delcared_war_on_axis_allies코0=추축이나 연합에 있는 동안 추축이나 연합에 전쟁선포
+achievement_carol_II_is_leader코0=§Y카롤 2세§\! 는 현임 지도자입니다
