--- a/musicplayer_l_english.properties
+++ b/musicplayer_l_english.properties
@@ -1,20 +1,20 @@
-MUSICPLAYER_PREV코0=Previous
-MUSICPLAYER_PLAY코0=Play
-MUSICPLAYER_PAUSE코0=Pause
-MUSICPLAYER_STOP코0=Stop
-MUSICPLAYER_NEXT코0=Next
-MUSICPLAYER_SHUFFLE_ON코0=Shuffle
-MUSICPLAYER_SHUFFLE_USER_FUNCTION코0=Weighted shuffle
-MUSICPLAYER_TIME_MIN_SEC코1=$MIN$:$SEC$
-MUSICPLAYER_OPEN_PLAYER코0=Open musicplayer
-MUSICPLAYER_TOGGLE_CONTROLLER코0=Toggle music controller
-MUSICPLAYER_PLAY_TRACK코0=Play track
-MUSICPLAYER_DISABLE_TRACK코0=Disable track
-MUSICPLAYER_ENABLE_TRACK코0=Enable track
-MUSICPLAYER_REMOVE_TRACK코0=Remove track
-MUSICPLAYER_CURRENT_TRACK코0=Current track: $NAME|Y$ $DURATION|Y$
+MUSICPLAYER_PREV코0=이전
+MUSICPLAYER_PLAY코0=재생
+MUSICPLAYER_PAUSE코0=일시정지
+MUSICPLAYER_STOP코0=정지
+MUSICPLAYER_NEXT코0=다음
+MUSICPLAYER_SHUFFLE_ON코0=섞기
+MUSICPLAYER_SHUFFLE_USER_FUNCTION코0=가중치를 둔 섞기
+MUSICPLAYER_TIME_MIN_SEC코1=$MIN$\:$SEC$
+MUSICPLAYER_OPEN_PLAYER코0=음악 플레이어 열기
+MUSICPLAYER_TOGGLE_CONTROLLER코0=음악 재생기 토글
+MUSICPLAYER_PLAY_TRACK코0=음악 재생
+MUSICPLAYER_DISABLE_TRACK코0=음악 해제
+MUSICPLAYER_ENABLE_TRACK코0=음악 추가
+MUSICPLAYER_REMOVE_TRACK코0=음악 제거
+MUSICPLAYER_CURRENT_TRACK코0=현재 재생 중인 음악\: $NAME|Y$ $DURATION|Y$
 MUSICPLAYER_TRACK_ITEM코0=$NAME|Y$ $DURATION|Y$
-MUSICPLAYER_INCREASE_VOL코0=Increase volume
-MUSICPLAYER_DECREASE_VOL코0=Decrease volume
-MUSICPLAYER_ADJUST_VOL코0=Adjust volume
-MUSICPLAYER_SAVE코0=Save
+MUSICPLAYER_INCREASE_VOL코0=음량 증가
+MUSICPLAYER_DECREASE_VOL코0=음량 감소
+MUSICPLAYER_ADJUST_VOL코0=음량 조절
+MUSICPLAYER_SAVE코0=저장
