--- a/technology_sharing_l_english.properties
+++ b/technology_sharing_l_english.properties
@@ -1,37 +1,37 @@
-commonwealth_research_name코0=Commonwealth Research
-commonwealth_research_desc코0=Reduced research time for technologies researched by other Commonwealth countries.
-comintern_research_name코0=Comintern Research
-comintern_research_desc코0=Reduced research time for technologies researched by other Comintern countries.
-tizard_mission_name코0=Tizard Mission
-tizard_mission_desc코0=Electronics research exchanged between England and the US.
-axis_research_name코0=Axis Research
-axis_research_desc코0=Reduced research time for technologies researched by other Axis countries.
-japanese_research_name코0=Japanese Research
-japanese_research_desc코0=Reduced research time for technologies researched by Japan.
-us_research_name코0=US Research
-us_research_desc코0=Reduced research time for technologies researched by the US.
-swpi_research_name코0=SWPI Research
-swpi_research_desc코0=Reduced research time for technologies researched by other countries in the South-West Pacific Initative.
-TECH_SHARNG_FACTOR_PER_COUNTRY코0=\n\nEach member with a tech reduces time by $VALUE|+%0$:\n
-TECH_SHARNG_FACTOR_BASE코0=Base: $VALUE|0%Y$\n
-TECH_SHARNG_COUNTRY_BONUS코0=Bonus: $VALUE|0%Y$\n
-TECH_SHARNG_FACTOR_EXTRA_DESC코0=\nEffective Technology Sharing modified to $VALUE|-%0$ due to:\n
-TECH_SHARNG_RESEARCH_OPPORTUNITIES코0=\nResearch Opportunities:
-TECH_SHARNG_COUNTRY_RESEARCH_OPPORTUNITY코0=\n@$TAG$$COUNTRY|H$: §Y$VALUE$§! technologies
-TECH_SHARNG_GROUP_CATEGORIE_LIMIT코0=\n\nLimited to: $LIST|Y$.
-TECH_SHARNG_DESCRIPTION_DELAYED코0=A Technology Sharing group get stronger the more nations are in it. For each member that has researched a certain Technology it will speed up researching of that Technology for someone in the group lacking it.
-TECH_SHARNG_RESEARCH_BONUS_VALUE_DESC코0=Technology Sharing: $VALUE|Y%0$\n
-LICENSED_PRODUCTION_RESEARCH_BONUS_VALUE_DESC코0=Licensed production: $VALUE|Y%0$\n
-TECH_SHARNG_RESEARCH_BONUS_VALUE_DETAILED_DESC코0=\n$NAME|H$ membership provides $VALUE|G%0$ bonus (max $MAX|H%0$) from countries:
+commonwealth_research_name코0=영연방 연구
+commonwealth_research_desc코0=다른 영연방 국가와 연구를 공유하여 연구시간을 줄일수 있습니다.
+comintern_research_name코0=코민테른 연구
+comintern_research_desc코0=다른 코민테른 국가와 연구를 공유하여 연구시간을 줄일수 있습니다.
+tizard_mission_name코0=티자드 사절단
+tizard_mission_desc코0=영국과 미국간의 전자기기 연구를 주고 받습니다.
+axis_research_name코0=추축국 연구
+axis_research_desc코0=다른 추축국 국가와 연구를 공유하여 연구시간을 줄일 수 있습니다.
+japanese_research_name코0=일본 연구
+japanese_research_desc코0=일본과 연구를 공유하여 연구시간을 줄일 수 있습니다.
+us_research_name코0=미국 연구
+us_research_desc코0=미국과 연구를 공유하여 연구시간을 줄일 수 있습니다.
+swpi_research_name코0=SWPI 연구
+swpi_research_desc코0=남서태평양 주도권의 다른 국가들과 연구를 공유하여 연구시간을 줄일 수 있습니다.
+TECH_SHARNG_FACTOR_PER_COUNTRY코0=\n\n기술이 있는 각 구성원은 시간을 단축 합니다 $VALUE|+%0$\:\n
+TECH_SHARNG_FACTOR_BASE코0=기본\: $VALUE|0%Y$\n
+TECH_SHARNG_COUNTRY_BONUS코0=혜택\: $VALUE|0%Y$\n
+TECH_SHARNG_FACTOR_EXTRA_DESC코0=\n효과적인 기술 공유가 $VALUE|-%0$만큼 변동치 얻음\:\n
+TECH_SHARNG_RESEARCH_OPPORTUNITIES코0=\n연구 기회\:
+TECH_SHARNG_COUNTRY_RESEARCH_OPPORTUNITY코0=\n@$TAG$$COUNTRY|H$\: §Y$VALUE$§\! 기술
+TECH_SHARNG_GROUP_CATEGORIE_LIMIT코0=\n\n제한됨\: $LIST|Y$.
+TECH_SHARNG_DESCRIPTION_DELAYED코0=기술 공유 그룹은 더 많은 국가가 참여할수록 강해집니다. 특정 기술을 연구한 각 구성원은 기술이 부족한 구성원을 위해 기술의 연구를 가속 할 것입니다.
+TECH_SHARNG_RESEARCH_BONUS_VALUE_DESC코0=기술 공유\: $VALUE|Y%0$\n
+LICENSED_PRODUCTION_RESEARCH_BONUS_VALUE_DESC코0=면허 생산\: $VALUE|Y%0$\n
+TECH_SHARNG_RESEARCH_BONUS_VALUE_DETAILED_DESC코0=\n$NAME|H$ 모임은 $VALUE|G%0$ 보너스를(최대 $MAX|H%0$) 국가로부터 제공합니다\:
 TECH_SHARNG_RESEARCH_BONUS_VALUE_DETAILED_COUNTRY코0=\n@$TAG$$COUNTRY|H$
-continuous_tech_share_group_name코0=Faction Research
-continuous_tech_share_group_desc코0=Reduced research time by nations in your faction because of your active Continuous Focus.
-NO_OTHER_SHARING_GROUPS코0=Is not part of a technology sharing group
-little_entente_research_group_desc코0=Reduced research time for technologies researched by countries in the Czech-led Little Entente.
-YUG_SOV_research_group_desc코0=Reduced research time for technologies researched by the Soviet Union and Yugoslavia.
-YUG_air_research_group_desc코0=Plane technology shared between Britain and Yugoslavia.
-YUG_naval_research_group_desc코0=Italian naval experts aid Yugoslavia in developing its navy.
-HUN_joint_tank_development_group_desc코0=Hungary and its allies cooperate in developing new tanks.
-HUN_joint_air_development_group_desc코0=Hungary and its allies cooperate in developing new planes.
-ger_dem_research_name코0=Central European Research
-ger_dem_research_desc코0=Reduced research time for technologies researched by other Central European Alliance countries.
+continuous_tech_share_group_name코0=세력 연구
+continuous_tech_share_group_desc코0=지속적 중점을 사용해 당신 진영 국가의 연구시간을 줄일수 있습니다.
+NO_OTHER_SHARING_GROUPS코0=기술 공유 그룹의 일원이 아닙니다
+little_entente_research_group_desc코0=체코 주도 소협상국에 가입된 국가들의 기술 연구에 혜택을 주어 연구 시간을 줄입니다.
+YUG_SOV_research_group_desc코0=소비에트 연방과 유고슬라비아 간의 기술 연구에 혜택을 주어 연구 시간을 줄입니다.
+YUG_air_research_group_desc코0=영국과 유고슬라비아 간의 항공 기술 공유
+YUG_naval_research_group_desc코0=이탈리아의 해군 전문가가 유고슬라비아 해군 개발에 참여합니다.
+HUN_joint_tank_development_group_desc코0=헝가리와 그 동맹들은 서로의 신형 전차 개발을 돕습니다.
+HUN_joint_air_development_group_desc코0=헝가리와 그 동맹들은 서로의 신형 항공기 개발을 돕습니다.
+ger_dem_research_name코0=중앙 유럽 연구
+ger_dem_research_desc코0=다른 중앙 유럽 동맹 국가와 연구를 공유하여 연구 시간을 줄일 수 있습니다.
